--- a/articles/rfi/999966.md
+++ b/articles/rfi/999966.md
@@ -1,5 +1,5 @@
-<!--1713356102000-->
-[视频 伊朗袭击以色列后 欧盟峰会讨论延长制裁伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%A7%86%E9%A2%91-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97)
+<!--1713363301000-->
+[日本首度出动两艘“准航舰”远征印太 或向中国秀肌肉](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98-%E5%87%86%E8%88%AA%E8%88%B0-%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA-%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89)
 ------
 
-<div>17/04/2024 - 13:25</div><img src="https://s.rfi.fr/media/display/7080199c-e6e1-11ee-bb42-005056a97e36/w:1280/p:16x9/AP24080521474896.jpg"><p><strong>欧盟首脑在布鲁塞尔举行会议，中东局势的危险升级是本次欧洲首脑会议的重要议题。欧盟可能跟随美国宣布对伊朗延长制裁措施，详情请见France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 报道。        </strong></p><div><p>欧盟首脑今明两天在布鲁塞尔举行27个成员国峰会，中东局势的危险升级是本次欧洲首脑会议的重要议题，根据最新草案，欧盟可能跟随美国宣布对伊朗延长制裁措施，</p><p>France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 从布鲁塞尔发出的报道指出，自从伊朗袭击以色列以来，西方外交一直处于紧急状态，欧盟27过呼吁以色列保持克制以避免冲突。</p><p>美国曾多次表示不想参与以色列可能做出的任何反应，并选择加强对伊斯兰政权的制裁。</p><p>随后欧盟27 国也想加强对伊朗的制裁，主要针对伊朗的武器库。</p><p>虽然此前本次欧盟首脑27国峰会原本打算完全讨论经济问题，但这些问题在很大程度上将由于国际局势严峻而被忽略。</p><p>本次欧盟首脑峰会首先关注伊朗问题和伊朗袭击以色列的后果，</p><p>从所能看到的最新结论草案显示27国呼吁各方保持最大限度的克制，并将讨论扩大已经实施的针对伊朗的制裁措施 。</p><p>欧盟从 2023 年 7 月对伊朗采取了一系列限制措施 ，主要是因为伊朗在乌克兰战争中支持俄罗斯 ，因此欧盟禁止向伊朗出口所需的生产无人机某些部件。</p><p>欧盟的想法是将这些限制扩大到其他类型的武器如导弹，这一提议得到了法国和德国的支持，而且希望将这些限制扩大到德黑兰在中东的盟友如黎巴嫩真主党。</p><p>分析指出不过目前这些制裁很可能在很大程度上仍是象征性，主要因为伊朗是逃避西方制裁的高手。</p><p>在本次为期两天的欧盟峰会期间，27 国还讨论加沙人民的处境并呼吁立即无条件停火进行人道救援。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWat.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E6%25AC%25A7%25E7%259B%259F%25E5%25B3%25B0%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E5%25BB%25B6%25E9%2595%25BF%25E5%2588%25B6%25E8%25A3%2581%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWat.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:51</div><img src="https://s.rfi.fr/media/display/a2524902-132f-11ea-a55b-005056a99247/w:1280/p:16x9/000_hkg10167682_0.jpg"><p><strong>日本海上自卫队17日宣布，出云号（JS Izumo DDH-183）和加贺号（JS Kaga DDH-184）两艘出云级直升机护卫舰将在5月3日启航，率领6艘水面舰艇、2架P-1海上巡逻机和数艘潜舰分4个战斗编队，展开为期7个月的“2024年印太远征”（IPD24），这是日本海自有史以来规模最大的单次远征部署。        </strong></p><div><p>据自由时报引述美国海军研究协会新闻（USNI News）17日消息，IPD24行动旨在实现“自由开放的印太地区”，突显了日本对区域安全的关切，以及与盟友合作的决心。出云级护卫舰的参与彰显了日本在印太地区的存在和影响力，以及其积极参与维护区域安全的承诺。</p><p>这次远征是日本首次同步部署两艘出云级护卫舰，反映日本意图加强在区域内的存在感。其中，加贺号已于3月完成首阶段改装，能够在甲板上起降F-35B战机，这将大幅提升日本的攻击及防御能力，出云号预计稍后进行类似改装。</p><p>远征期间，日本舰队将分赴澳洲、斐济、法属玻里尼西亚、印度、基里巴斯、帕劳、巴布亚新几内亚、菲律宾、马绍尔群岛、密克罗尼西亚、东加、美国和万纳杜等地，参与包括“马拉拉”（Marara ）、“环太平洋”（RIMPAC）、“太平洋之龙”（Pacific Dragon）、“太平洋先锋”（Pacific Vanguard）、“卡卡杜”（ Kakadu）、“太平洋伙伴”（Pacific Partnership）以及“马拉巴尔”（Malabar）等一系列联合演习，目标是增进与区内盟友的联合作战能力。</p><p>该报道称，与此同时，加拿大14日启动代号“地平线行动”（Operation Horizon）的印太任务，派遣护卫舰蒙特娄号 （HMCS Montreal FFH336） 执行为期6个月的任务；美国罗斯福号航空母舰打击群 （Theodore Roosevelt CSG）结束与韩国及日本海卫在东海的联合演习后，又于11日12日周六期间，与日本海自舰艇在东海南部进行双边演习。</p><p>自由时报称，另据德国军方透露，美海军卡尔文森号（USS Carl Vinson CVN-70）航舰打打击群将参加今夏在夏威夷附近举行的“环太平洋”演习，德国也将出动3架战机和1架运输机与之合作，舰载机将演练保护航舰免受敌机威胁，并模拟对敌军雷达阵地实施打击行动。</p><p>消息引述军事专家分析，日本此次大规模远征部署，旨在向国际社会传达维护自由开放航行的决心，并透过与美德等盟友的联合演训，增强共同威慑和因应区域安全威胁的能力，反制中俄在印太地区日益扩张的影响力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E5%25BA%25A6%25E5%2587%25BA%25E5%258A%25A8%25E4%25B8%25A4%25E8%2589%2598-%25E5%2587%2586%25E8%2588%25AA%25E8%2588%25B0-%25E8%25BF%259C%25E5%25BE%2581%25E5%258D%25B0%25E5%25A4%25AA-%25E6%2588%2596%25E5%2590%2591%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2580%25E8%2582%258C%25E8%2582%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
