--- a/articles/rfi/999989.md
+++ b/articles/rfi/999989.md
@@ -1,5 +1,5 @@
-<!--1713284102000-->
-[抖音多人揭发每14天向北京传送美国用户个资 官方称属个人不满恶意栽赃](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84-%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83)
+<!--1713300302000-->
+[戴琪：拜登政府正&quot;认真审视&quot;各种贸易防御工具以应对中国经济威胁 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240416-%E6%88%B4%E7%90%AA-%E6%8B%9C%E7%99%BB%E6%94%BF%E5%BA%9C%E6%AD%A3-%E8%AE%A4%E7%9C%9F%E5%AE%A1%E8%A7%86-%E5%90%84%E7%A7%8D%E8%B4%B8%E6%98%93%E9%98%B2%E5%BE%A1%E5%B7%A5%E5%85%B7%E4%BB%A5%E5%BA%94%E5%AF%B9%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E%E5%A8%81%E8%83%81)
 ------
 
-<div>16/04/2024 - 17:08</div><img src="https://s.rfi.fr/media/display/fc9c5412-e1f6-11ee-92bb-005056a90284/w:1280/p:16x9/AP22238339577090-1.jpg"><p><strong>美国众议院3月中旬通过法案，要求TikTok与中国母公司字节跳动（ByteDance）脱离关系，否则将予以禁用。TikTok执行长周受资（Shou Zi Chew）则不断在各种管道上声称该公司不会把美国用户的资讯交给北京。然而，《财星》（Fortune）杂志采访曾经在该公司任职过的 11 位人士却显示，周受资所说的并非事实。TikTok前员工证实每14天须向北京传送美国用户个资。        </strong></p><div><p>新头壳今天引述《财星》（Fortune）杂志消息，《财星》采访曾于2022 年 4 月至 9 月担任TikTok资深数据师的特纳（Evan Turner）的说法，指出该公司几乎每隔 14 天就会要他将包含数十万美国用户资料的电子表格，透过电子邮件发送给北京的字节跳动。 这些数据包括 TikTok 美国用户的姓名、电子邮件地址、IP 位址以及地理和人口统计资讯。</p><p>特纳说：“我确实参与了一个向中国提供美国数据的项目。”</p><p>他指控说，“他们完全是共犯。 一些在高层管理人员中工作的美国人完全是这件事的同谋。”</p><p>2022 年之前担任TikTok 安全工程首席技术专案经理的莱恩（Patrick Spaulding Ryan）和另一位前TikTok 美国员工则证实，该公司与字节跳动共享Lark软件，由于这个软件是字节跳动负责经营，字节跳动的员工可以看到 TikTok 员工有关美国用户资料等内容的讨论。</p><p>莱恩指出，TikTok 和字节跳动共享的另一项服务是Seal，但“（TikTok 美国） 员工仍然完全不知道”，没有人知道这套软件是如何运作的。</p><p>该报道采访约翰霍普金斯大学资讯安全研究所主任达布拉（Anton Dahbura）认为，这种联系证明“字节跳动并没有致力于在其中国业务和美国业务之间建立真正的防火墙”。 他表示，前员工对 Lark 与中国的联系的指控“并不令人意外”。</p><p>该报道称，TikTok则声称这些已经离职的员工完全是心怀不满、捏造毫无根据的指控。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWR7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258A%2596%25E9%259F%25B3%25E5%25A4%259A%25E4%25BA%25BA%25E6%258F%25AD%25E5%258F%2591%25E6%25AF%258F14%25E5%25A4%25A9%25E5%2590%2591%25E5%258C%2597%25E4%25BA%25AC%25E4%25BC%25A0%25E9%2580%2581%25E7%25BE%258E%25E5%259B%25BD%25E7%2594%25A8%25E6%2588%25B7%25E4%25B8%25AA%25E8%25B5%2584-%25E5%25AE%2598%25E6%2596%25B9%25E7%25A7%25B0%25E5%25B1%259E%25E4%25B8%25AA%25E4%25BA%25BA%25E4%25B8%258D%25E6%25BB%25A1%25E6%2581%25B6%25E6%2584%258F%25E6%25A0%25BD%25E8%25B5%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWR7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 21:08</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪（Katherine Tai）将于周二在国会听证会上作证从而告诉美国国会：拜登政府正在"认真审视"美国的各种贸易防御工具，以应对中国贸易和经济政策所构成的威胁。                    </strong></p><div><p>据路透社4月16日发自华盛顿的消息，戴琪在提前提供的书面证词摘要中指出，中国的政策导致“多个行业出现依赖性和脆弱性，伤害了美国工人和商家，并给我们的供应链制造了真正的风险”。拜登政府为应对中国贸易和经济政策所构成的威胁，正在“认真考虑”美国的各种贸易防御工具，包括重新检讨特朗普时代对中国进口商品课征的关税。</p><p>路透社引述戴琪的话说，“这也是为什么我们正在认真考虑我们现有的工具如何应对这一问题，包括通过对中国相关301条款关税历时四年的检讨。”</p><p>戴琪在书面证词中表示，她正在认真审阅一份由五家美国工会提出的调查申请，该申请要求对中国海上后勤以及造船业中被指控的不公平行为、政策和作法进行新的301条款调查。</p><p>戴琪在证词摘要中还表示，“我们与中华人民共和国的经济关系是复杂的。正如总统所说，我们希望与中国竞争而不是冲突。” 拜登政府在供应链方面工作的主要目的，就是要减少对中国的依赖，让供应来源多元化，以避免像新冠疫情末期出现的瓶颈。</p><p>一周前，美国财政部长耶伦在访华期间已向中国领导人发出警告：由于中国对电动车、太阳能板和其他清洁能源物资的过分投资导致的产能过剩，形成了一波不可接受的出口浪潮的威胁，伤害了美国及其他地方的制造商。</p><p>耶伦周二也将在美国财政部与中国官员就“平衡成长”展开新的对话。路透社引述中国贸易专家的话说，耶伦对北京有关产能过剩的警告可能只是第一步，后续可能会启动新一轮“301条款”不公平贸易行为的调查，从而导致对电动车、太阳能板和其他进口产品加征新的关税。</p><p><strong>2024年度《对外贸易壁垒国家贸易评估报告》</strong></p><p>在不久前的3月29日，美国贸易代表戴琪曾发布2024年度《对外贸易壁垒国家贸易评估报告》（National Trade Estimate Report on Foreign Trade Barriers），其中特别提到了中国在农产品、非市场政策和做法以及助长政府侵犯权利的数据政策方面的壁垒。该报告自1985年以来每年发布一次，全面审查美国商品和服务出口、对外直接投资以及电子商务在主要出口市场面临的重大外国壁垒。</p><p>本年度的报告指出，在农产品方面，中华人民共和国在一系列农产品和食品上存在不透明且繁琐的设施注册要求，作为受高致病性禽流感影响的地区之一，其家禽产品贸易没有遵守基于科学和风险的标准和承诺。</p><p>报告还表示，中国国家主导的非市场经济和贸易方式继续影响着中国奉行的产业政策，并为中国企业提供不公平的竞争优势。这包括大规模的财政支持、监管和其他优惠以及旨在使外国竞争对手处于不利地位的正式和非正式政策和做法。美国贸易代表办公室指出，这种行为严重扭曲和扰乱市场，导致严重且持续的产能过剩，钢铁、铝和太阳能等行业当前的情况就证明了这一点。</p><p>报告还列出了中华人民共和国和俄罗斯等一系列国家存在的有问题的数据政策。报告说，数据政策被利用来推进国家的侵入行为，例如，这些政府可以利用数据本地化政策来监视其人民、干涉劳工权利以及以其他方式损害公民和政治自由。在某些情况下，这些数据政策也缺乏明确性并存在合规问题。</p><p><strong>拉美去年从中国进口钢材年增44% 达创纪录的1000万吨</strong></p><p>此外，最新公布的拉丁美洲钢铁协会（Latin American Steel Association）数据显示：去年拉美地区国家从中国进口的钢材达到创纪录的1000万吨，年增44%。20年前，这个数字只有8.5万吨。</p><p>在拉丁美洲，约有140万人从事钢铁业，但他们的生计日益受到威胁，因为中国钢铁的价格比本土生产的价格低了40%。拉丁美洲钢铁协会主管瓦格纳（Alejandro Wagner）告诉法新社：中国在拉丁美洲的影响力太大了。没有人反对国家之间的贸易，但必须是公平贸易。</p><p>随着廉价的中国钢铁涌入拉丁美洲，威胁到与该行业相关的数以十万计就业机会，拉美金属工人呼吁提高进口关税，比如智利和巴西等国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
