--- a/articles/rfi/999952.md
+++ b/articles/rfi/999952.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[警告称：中国和欧盟有全面贸易战危险](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%AD%A6%E5%91%8A%E7%A7%B0-%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9)
+<!--1713374103000-->
+[2024年夏季奥运会倒计时100天，巴黎准备好了吗？](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97)
 ------
 
-<div>17/04/2024 - 15:26</div><img src="https://s.rfi.fr/media/display/e74645da-61fb-11ee-b8df-005056bf30b7/w:1280/p:16x9/AP23268223768333.jpg"><p><strong>欧洲商业游说团体负责人周三警告说，随着保护主义浪潮的高涨，中国和欧洲面临“慢动作火车事故”，有可能演变成一场全面的贸易战。而德国总理向北京转达了欧洲的担忧。        </strong></p><div><p>据路透社今天引述欧盟商会主席警告称，中国和欧盟的贸易紧张局势可能引发全面贸易战。</p><p>中国欧盟商会会长延斯·埃斯凯伦德表示，虽然对两方贸易的一些担忧是合理的，但如果欧洲和中国领导人不加强对话，就存在非生产性脱钩的风险。埃斯凯伦德在广州商会华南分会的一次会议上表示：“火车事故尚未发生，但如果我们继续沿着今天的行进方向，我们可以预见，火车事故将会发生。”</p><p>他指出，“我们需要我们的领导人坐下来探讨如何避免这成为一场全面的贸易战。我认为这已经变得有点紧迫了。”</p><p>周二，德国总理朔尔茨结束了对中国为期三天的访问，并与中国国家主席习近平进行了会谈，朔尔茨在会谈中转达了欧洲对北京投资政策的担忧，并推动改善市场准入。</p><p>欧盟已对中国制造商是否在其市场上倾销电动汽车等补贴商品展开了多项调查。</p><p>美国财长耶伦本月早些时候也访问了中国，并于周二表示，中国对清洁能源产品先进制造业的大规模投资导致了不公平的竞争环境。</p><p>埃斯凯伦德表示，最近的高层会见令人鼓舞。</p><p>据路透社说，埃斯凯伦德讲话时，成千上万的外国买家正在一年两次的广交会上寻找中国制造商进行交易，广交会是中国最大的贸易展览会，在珠江河畔举行。</p><p>埃斯凯伦德表示，鉴于中国作为世界领先制造商的地位，不可能想象没有中国的全球供应链。他称，“我们希望看到的一点改变是，人们认识到中国的制造业规模如此之大，制造业的小幅增量增长就可能对全球产生巨大影响。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25AD%25A6%25E5%2591%258A%25E7%25A7%25B0-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2592%258C%25E6%25AC%25A7%25E7%259B%259F%25E6%259C%2589%25E5%2585%25A8%25E9%259D%25A2%25E8%25B4%25B8%25E6%2598%2593%25E6%2588%2598%25E5%258D%25B1%25E9%2599%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 12:03</div><img src="https://s.rfi.fr/media/display/602bcf6c-f025-11ee-a26d-005056bfb2b6/w:1280/p:16x9/000_34MX8FC.jpg"><p><strong>距离2024年巴黎夏季奥运会开幕仅剩100天，巴黎、法国本土其他地区和大溪地的奥运场馆正准备迎接7月26日至8月11日之间即将举行的世界上最大的体育赛事 。        </strong></p><div><p>巴黎届时将拥有15个奥运会比赛场馆，并将在其一些最具标志性的古迹及其周边举办32项奥运会比赛项目中的21项。</p><p>巴黎于2017年获得了本届奥运会的主办权，多年来一直在建设场馆，所有工作计划于2024年初完成。这些新场馆包括巴黎附近的水上运动中心，该中心将举办水球和跳水比赛。在水上运动中心附近，平日里举办橄榄球或足球世界杯的法兰西体育场刚刚修建了一条全新的田径跑道。将迎接羽毛球和艺术体操比赛的拉夏贝尔门体育场是小巴黎唯一新建的奥运场馆。通常迎接各类音乐会的德方斯竞技场将在五月份彻底改造，以容纳举办游泳比赛的奥林匹克游泳池。射击运动员将在距离巴黎数小时车程的法国中部小镇沙托鲁射击中心进行比赛。</p><p>7月26日，数千名运动员将在塞纳河上乘船参加奥运开幕式。塞纳河还将在铁人三项和开放水域游泳比赛中接待游泳运动员。这是自100年前，即1924年巴黎举办奥运会以来，塞纳河首次成为被认为安全的游泳比赛场地。</p><p>塞纳河对岸的大皇宫是为1900年世界博览会而建的，经过翻修后，今年可举办击剑和跆拳道比赛。</p><p>沙滩排球比赛将在埃菲尔铁塔脚下的战神广场上举行，运动员们或将在比赛时目睹铁塔上的日落。</p><p>香榭丽舍大街尽头的协和广场将举办小轮车自由式、滑板和霹雳舞赛事。</p><p>荣军院建于1687年，是一所军事医院和退伍军人养老院，内有法国军事历史博物馆和纪念碑，以及拿破仑·波拿巴的墓。本次奥运会期间，观众将可以前往此地观看射箭、自行车和田径比赛。</p><p>距离巴黎不远处，马术比赛将在凡尔赛宫花园举行。凡尔赛宫是国王路易十四的居所，在法国大革命之前，它一直是皇室的中心。</p><p>在巴黎之外，帆船比赛将在马赛的蔚蓝海岸全新航海中心举行。为了向法国的海外领土致敬，冲浪比赛将在法属波利尼西亚大溪地西南海岸的一个村庄蒂胡波奥举行。这是一个拥有原始自然美景的地方，拥有世界上最著名的冲浪胜地。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-2024%25E5%25B9%25B4%25E5%25A4%258F%25E5%25AD%25A3%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6100%25E5%25A4%25A9%25EF%25BC%258C%25E5%25B7%25B4%25E9%25BB%258E%25E5%2587%2586%25E5%25A4%2587%25E5%25A5%25BD%25E4%25BA%2586%25E5%2590%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
