--- a/articles/rfi/999965.md
+++ b/articles/rfi/999965.md
@@ -1,5 +1,5 @@
-<!--1713356104000-->
-[中国田协出面说要调查半程马拉松作弊指控案](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88)
+<!--1713363302000-->
+[法国大办诺曼底登陆80周年庆祝活动 但不邀请普京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8-%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC)
 ------
 
-<div>17/04/2024 - 11:21</div><img src="https://s.rfi.fr/media/display/8014ac0e-dc57-11ee-b9f1-005056bf30b7/w:1280/p:16x9/AP23200244616280.jpg"><p><strong>刚刚过去的周日北京半程马拉松的视频显示，三名来自非洲国家的选手似乎放慢速度，以便中国选手何杰超过他们并获胜。中国田径协会誓言加强对路跑赛事的调查与监管。        </strong></p><div><p>中国选手何杰报告以 1 小时 03 分 44 秒的成绩获胜，他领先埃塞俄比亚选手德杰内·海鲁·比基拉 (Dejene Hailu Bikila) 和肯尼亚选手罗伯特·凯特 (Robert Keter) 和威利·姆南加特 (Willy Mnangat)，这3个人均获得并列第二名。</p><p>据网上分享的视频显示，三名领先的跑步者向还稍稍落后的何杰挥手，示意终点线。最终四个人一起跑完了整个比赛，总里程刚刚超过 13 英里。</p><p>肯尼亚选手姆南加特告诉英国广播公司，他们三人只是作为起跑者参加比赛，并不计成绩。然而，按照惯例，他们的参赛号码布并没有表明他们是起跑后跑跑而已。</p><p>北京市体育主管部门北京市体育局表示，正在对该事件进行调查，调查结果将在稍后公布。该机构还说，“总体来看，路跑赛事整体运行平稳，但赛事组织管理方面的问题也暴露出来，引起了广泛关注。”</p><p>据路透社说，长跑在中国越来越受欢迎，但比赛却有作弊和组织不善的历史。比如，2018年深圳半程马拉松赛中，有258名参赛者被证实作弊。 2010年，中国山东女子半程马拉松冠军因被发现由他人代跑而被剥夺了冠军头衔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2594%25B0%25E5%258D%258F%25E5%2587%25BA%25E9%259D%25A2%25E8%25AF%25B4%25E8%25A6%2581%25E8%25B0%2583%25E6%259F%25A5%25E5%258D%258A%25E7%25A8%258B%25E9%25A9%25AC%25E6%258B%2589%25E6%259D%25BE%25E4%25BD%259C%25E5%25BC%258A%25E6%258C%2587%25E6%258E%25A7%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:45</div><img src="https://s.rfi.fr/media/display/b95f53c6-e57b-11ec-9266-005056bf30b7/w:1280/p:16x9/AFP_000_WAS2004050505268_DDay_Omaha_Beach_1944.jpg"><p><strong>俄罗斯将受邀参加6月初举行的盟军在法国诺曼底登陆80周年庆祝活动，但由于俄罗斯对乌克兰侵略战争，俄罗斯总统普京没有被邀参加仪式。        </strong></p><div><p>据这次纪念活动的组织者报告，“鉴于目前俄罗斯在乌克兰的侵略战争，普京将不会被邀请参加诺曼底登陆的纪念活动。”</p><p>该组织者称，“然而，俄罗斯将被邀请出席，以便苏联人民的承诺和牺牲，以及他们对 1945 年胜利的贡献应当得到尊重。”</p><p>诺曼底登陆纪念仪式组织者没有详细说明俄罗斯可以以何种级别的代表参加在法国西北部诺曼底举行的纪念活动。</p><p>2014 年 6 月，尽管克里米亚被俄罗斯兼并，因俄罗斯总统普京仍受邀参加当年的 70 周年庆祝活动。</p><p>随后，俄罗斯总统普京和乌克兰总统波罗申科在乌克兰东部发生亲俄叛乱军事冲突期间首次对话，西方指责莫斯科煽动甚至直接策划了这场叛乱。促进这次对话有法国总统奥朗德和德国总理默克尔的斡旋，随后上述这四个国家建立“诺曼底”形式进行谈判，以寻求乌克兰危机的解决方案。危机持续，直至2022年2月俄罗斯入侵乌克兰至今。</p><p>但普京曾经没有被邀请参加2019年“诺曼底登陆”（D-Day）75周年纪念活动，当时乌克兰东部局势已经陷入困境。</p><p>普京称不被邀请“绝对不是一个问题”。 莫斯科称不要夸大盟军登陆的重要性，坚持二战中有 2700 万苏联人死亡。</p><p>组织纪念盟军登陆活动的“解放使命”组织解释：“从历史上看，法国一直邀请当年有士兵在诺曼底登陆的国家参加这一仪式。俄罗斯联邦也被邀请过参加仪式。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25B3%2595%25E5%259B%25BD%25E5%25A4%25A7%25E5%258A%259E%25E8%25AF%25BA%25E6%259B%25BC%25E5%25BA%2595%25E7%2599%25BB%25E9%2599%258680%25E5%2591%25A8%25E5%25B9%25B4%25E5%25BA%2586%25E7%25A5%259D%25E6%25B4%25BB%25E5%258A%25A8-%25E4%25BD%2586%25E4%25B8%258D%25E9%2582%2580%25E8%25AF%25B7%25E6%2599%25AE%25E4%25BA%25AC&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
