--- a/articles/rfi/999979.md
+++ b/articles/rfi/999979.md
@@ -1,5 +1,5 @@
-<!--1713303902000-->
-[中国奇瑞将签署在巴塞罗那生产协议](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE)
+<!--1713318302000-->
+[巴黎奥运将进入百日倒计时](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6)
 ------
 
-<div>16/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/d798ca48-fc30-11ee-881c-005056bf30b7/w:1280/p:16x9/Logo-Chery.png"><p><strong></strong></p><div><p>西班牙工业部在一份声明中表示，“两家公司达成了一项“协议”，将在位于巴塞罗那前日产工厂生产汽车”。</p><p>现阶段尚未透露该协议的细节，该协议将于周三在马德里举行的会议上签署，会议期间工业部长乔迪·俄瑞武（Jordi Hereu）和奇瑞代表团将在加泰罗尼亚地区政府成员出席的情况下签署。</p><p>加泰罗尼亚议会议长托伦德(Roger Torrent)高兴地说，“经过几个月的谈判，我们最终实现了前日产工厂的再工业化”，“埃布罗和奇瑞之间达成了生产数千辆汽车的协议”。因此前有消息说，中国奇瑞有意在意大利设分厂。</p><p>至于选址，奇瑞很可能会重启原先日产在巴塞罗那的工厂，恢复当地约1600个工作岗位。该工厂曾因产量减少于2021年停产关闭。</p><p>拥有 3,000 名员工的前日产工厂于 2021 年 12 月关闭。这个庞大工业综合体的一部分被出售给摩托车制造商 Silence 和 EV Motors，但地方当局与 EV Motors 一直在寻找另一家投资者完全重新启动该网站。</p><p>奇瑞是继电动汽车冠军比亚迪之后第二家宣布在欧洲设立工厂的中国制造商，比亚迪于二月份正式在匈牙利建设其第一家欧洲工厂。 后者将在三年内投入运营。</p><p>奇瑞成立于1997年，是一家国有企业。 该品牌声称到 2023 年将售出 188 万辆乘用车，大约 15 年前在中国非常受欢迎，尤其是针对当地市场的省油型城市汽车。</p><p>法新社表示，中国奇瑞做出这样的决定是不容易的。2023年下半年以来，欧美接连宣布对中国电动汽车发起调查措施。当年9月，欧盟宣布对中国电动汽车启动反补贴调查。2024年3月6日，欧盟发布公报称，“已掌握足够证据，表明出口到欧盟的中国电动汽车正在接受补贴”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A5%2587%25E7%2591%259E%25E5%25B0%2586%25E7%25AD%25BE%25E7%25BD%25B2%25E5%259C%25A8%25E5%25B7%25B4%25E5%25A1%259E%25E7%25BD%2597%25E9%2582%25A3%25E7%2594%259F%25E4%25BA%25A7%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/7a533db2-fc32-11ee-9fbf-005056a97e36/w:1280/p:16x9/6db39559f747e0f1053aa6446f413ae46fbba34b-1.png"><p><strong></strong></p><div><p>为了满足大众的需求，这些门票中有一半的价格将低于 100 欧元，只有 5% 的门票价格超过 400 欧元。</p><p>16日，法国游泳奥运冠军劳瑞·马努多(Laure Manoudu)成为奥运圣火传递第二位火炬手。根据日程安排，奥运火炬将在希腊境内进行为期9天的传递，于4月26日离开希腊前往法国。4月26日下午17:30在泛雅典体育场，与巴黎奥组委代表团完成交接仪式。</p><p>交接结束后，圣火将在雅典的法国大使馆过夜，第二天登上三桅船“贝伦”号前往法国马赛，并于当地时间5月8日开始在法国展开为期68天的传递活动。最终将于当地时间7月26日，在巴黎点燃万众瞩目的主火炬，宣告第33届夏季奥运会正式开幕。</p><p>巴黎奥运会将于7月26日开幕。4月17日，法国巴黎将迎来夏季奥运会开幕倒计时100天。</p><p>法国总统马克龙15日在接受法国媒体采访时谈到了即将于7月26日在塞纳河上举行的巴黎奥运会开幕式，他表示如果安全风险过高，可能会放弃在塞纳河上举办。</p><p>马克龙表示，“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUI.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25B0%2586%25E8%25BF%259B%25E5%2585%25A5%25E7%2599%25BE%25E6%2597%25A5%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUI.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
