--- a/articles/rfi/999984.md
+++ b/articles/rfi/999984.md
@@ -1,5 +1,5 @@
-<!--1713300302000-->
-[戴琪：拜登政府正&quot;认真审视&quot;各种贸易防御工具以应对中国经济威胁 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240416-%E6%88%B4%E7%90%AA-%E6%8B%9C%E7%99%BB%E6%94%BF%E5%BA%9C%E6%AD%A3-%E8%AE%A4%E7%9C%9F%E5%AE%A1%E8%A7%86-%E5%90%84%E7%A7%8D%E8%B4%B8%E6%98%93%E9%98%B2%E5%BE%A1%E5%B7%A5%E5%85%B7%E4%BB%A5%E5%BA%94%E5%AF%B9%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E%E5%A8%81%E8%83%81)
+<!--1713303902000-->
+[中国奇瑞将签署在巴塞罗那生产协议](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>16/04/2024 - 21:08</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪（Katherine Tai）将于周二在国会听证会上作证从而告诉美国国会：拜登政府正在"认真审视"美国的各种贸易防御工具，以应对中国贸易和经济政策所构成的威胁。                    </strong></p><div><p>据路透社4月16日发自华盛顿的消息，戴琪在提前提供的书面证词摘要中指出，中国的政策导致“多个行业出现依赖性和脆弱性，伤害了美国工人和商家，并给我们的供应链制造了真正的风险”。拜登政府为应对中国贸易和经济政策所构成的威胁，正在“认真考虑”美国的各种贸易防御工具，包括重新检讨特朗普时代对中国进口商品课征的关税。</p><p>路透社引述戴琪的话说，“这也是为什么我们正在认真考虑我们现有的工具如何应对这一问题，包括通过对中国相关301条款关税历时四年的检讨。”</p><p>戴琪在书面证词中表示，她正在认真审阅一份由五家美国工会提出的调查申请，该申请要求对中国海上后勤以及造船业中被指控的不公平行为、政策和作法进行新的301条款调查。</p><p>戴琪在证词摘要中还表示，“我们与中华人民共和国的经济关系是复杂的。正如总统所说，我们希望与中国竞争而不是冲突。” 拜登政府在供应链方面工作的主要目的，就是要减少对中国的依赖，让供应来源多元化，以避免像新冠疫情末期出现的瓶颈。</p><p>一周前，美国财政部长耶伦在访华期间已向中国领导人发出警告：由于中国对电动车、太阳能板和其他清洁能源物资的过分投资导致的产能过剩，形成了一波不可接受的出口浪潮的威胁，伤害了美国及其他地方的制造商。</p><p>耶伦周二也将在美国财政部与中国官员就“平衡成长”展开新的对话。路透社引述中国贸易专家的话说，耶伦对北京有关产能过剩的警告可能只是第一步，后续可能会启动新一轮“301条款”不公平贸易行为的调查，从而导致对电动车、太阳能板和其他进口产品加征新的关税。</p><p><strong>2024年度《对外贸易壁垒国家贸易评估报告》</strong></p><p>在不久前的3月29日，美国贸易代表戴琪曾发布2024年度《对外贸易壁垒国家贸易评估报告》（National Trade Estimate Report on Foreign Trade Barriers），其中特别提到了中国在农产品、非市场政策和做法以及助长政府侵犯权利的数据政策方面的壁垒。该报告自1985年以来每年发布一次，全面审查美国商品和服务出口、对外直接投资以及电子商务在主要出口市场面临的重大外国壁垒。</p><p>本年度的报告指出，在农产品方面，中华人民共和国在一系列农产品和食品上存在不透明且繁琐的设施注册要求，作为受高致病性禽流感影响的地区之一，其家禽产品贸易没有遵守基于科学和风险的标准和承诺。</p><p>报告还表示，中国国家主导的非市场经济和贸易方式继续影响着中国奉行的产业政策，并为中国企业提供不公平的竞争优势。这包括大规模的财政支持、监管和其他优惠以及旨在使外国竞争对手处于不利地位的正式和非正式政策和做法。美国贸易代表办公室指出，这种行为严重扭曲和扰乱市场，导致严重且持续的产能过剩，钢铁、铝和太阳能等行业当前的情况就证明了这一点。</p><p>报告还列出了中华人民共和国和俄罗斯等一系列国家存在的有问题的数据政策。报告说，数据政策被利用来推进国家的侵入行为，例如，这些政府可以利用数据本地化政策来监视其人民、干涉劳工权利以及以其他方式损害公民和政治自由。在某些情况下，这些数据政策也缺乏明确性并存在合规问题。</p><p><strong>拉美去年从中国进口钢材年增44% 达创纪录的1000万吨</strong></p><p>此外，最新公布的拉丁美洲钢铁协会（Latin American Steel Association）数据显示：去年拉美地区国家从中国进口的钢材达到创纪录的1000万吨，年增44%。20年前，这个数字只有8.5万吨。</p><p>在拉丁美洲，约有140万人从事钢铁业，但他们的生计日益受到威胁，因为中国钢铁的价格比本土生产的价格低了40%。拉丁美洲钢铁协会主管瓦格纳（Alejandro Wagner）告诉法新社：中国在拉丁美洲的影响力太大了。没有人反对国家之间的贸易，但必须是公平贸易。</p><p>随着廉价的中国钢铁涌入拉丁美洲，威胁到与该行业相关的数以十万计就业机会，拉美金属工人呼吁提高进口关税，比如智利和巴西等国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/d798ca48-fc30-11ee-881c-005056bf30b7/w:1280/p:16x9/Logo-Chery.png"><p><strong></strong></p><div><p>西班牙工业部在一份声明中表示，“两家公司达成了一项“协议”，将在位于巴塞罗那前日产工厂生产汽车”。</p><p>现阶段尚未透露该协议的细节，该协议将于周三在马德里举行的会议上签署，会议期间工业部长乔迪·俄瑞武（Jordi Hereu）和奇瑞代表团将在加泰罗尼亚地区政府成员出席的情况下签署。</p><p>加泰罗尼亚议会议长托伦德(Roger Torrent)高兴地说，“经过几个月的谈判，我们最终实现了前日产工厂的再工业化”，“埃布罗和奇瑞之间达成了生产数千辆汽车的协议”。因此前有消息说，中国奇瑞有意在意大利设分厂。</p><p>至于选址，奇瑞很可能会重启原先日产在巴塞罗那的工厂，恢复当地约1600个工作岗位。该工厂曾因产量减少于2021年停产关闭。</p><p>拥有 3,000 名员工的前日产工厂于 2021 年 12 月关闭。这个庞大工业综合体的一部分被出售给摩托车制造商 Silence 和 EV Motors，但地方当局与 EV Motors 一直在寻找另一家投资者完全重新启动该网站。</p><p>奇瑞是继电动汽车冠军比亚迪之后第二家宣布在欧洲设立工厂的中国制造商，比亚迪于二月份正式在匈牙利建设其第一家欧洲工厂。 后者将在三年内投入运营。</p><p>奇瑞成立于1997年，是一家国有企业。 该品牌声称到 2023 年将售出 188 万辆乘用车，大约 15 年前在中国非常受欢迎，尤其是针对当地市场的省油型城市汽车。</p><p>法新社表示，中国奇瑞做出这样的决定是不容易的。2023年下半年以来，欧美接连宣布对中国电动汽车发起调查措施。当年9月，欧盟宣布对中国电动汽车启动反补贴调查。2024年3月6日，欧盟发布公报称，“已掌握足够证据，表明出口到欧盟的中国电动汽车正在接受补贴”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A5%2587%25E7%2591%259E%25E5%25B0%2586%25E7%25AD%25BE%25E7%25BD%25B2%25E5%259C%25A8%25E5%25B7%25B4%25E5%25A1%259E%25E7%25BD%2597%25E9%2582%25A3%25E7%2594%259F%25E4%25BA%25A7%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
