--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
-<!--1713278703000-->
-[美国大使抵访韩朝边境 敦促俄中不要“奖励”朝鲜的不良行为](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83-%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81-%E5%A5%96%E5%8A%B1-%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA)
+<!--1713284102000-->
+[抖音多人揭发每14天向北京传送美国用户个资 官方称属个人不满恶意栽赃](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84-%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83)
 ------
 
-<div>16/04/2024 - 15:53</div><img src="https://s.rfi.fr/media/display/d9cbf072-6bba-11ed-9d99-005056bf30b7/w:1280/p:16x9/AP22313661331641.jpg"><p><strong>美国驻联合国大使周二敦促俄罗斯和中国改弦更张，停止奖励朝鲜的不良行为，并阻止朝鲜因武器计划而逃避制裁。        </strong></p><div><p>美国驻联合国特使敦促俄罗斯和中国不要“奖励”朝鲜的不良行为。美国驻联合国大使琳达·托马斯·格林菲尔德于 2024 年 4 月 16 日在韩国板门店休战村附近的坡州博尼法斯美军基地向记者发表讲话时发表上述言论。</p><p>琳达·托马斯·格林菲尔德大使访问了韩朝边境非军事区，非军事区是朝韩两国之间戒备森严的边界，路透社今天报道称，严格来说，两国仍处于交战状态。</p><p>在她访问韩国之前，俄罗斯拒绝了多国专家小组的年度更新，该小组在过去15年里一直监督联合国旨在遏制朝鲜核计划和导弹计划的制裁措施的执行情况。</p><p>托马斯-格林菲尔德表示，莫斯科的否决和中国的弃权只会“增强”朝鲜规避国际制裁的做法，并“保护”朝鲜免受问责。</p><p>她告诉记者，“隐藏真相并不能改变事实。奖励不良行为只会鼓励这种行为。”她说， “我们敦促俄罗斯和中国改弦更张，并再次敦促平壤选择外交手段，来到谈判桌前致力于建设性对话。”</p><p>据格林菲尔德表示，华盛顿将与韩国、日本和安理会其他伙伴合作，寻找“一些创造性的方式、一些创造性的思维”，以继续监督制裁的执行和该小组开展的其他工作说。</p><p>后来在首尔，她会见了一群年轻的朝鲜叛逃者，称赞他们逃往韩国“勇敢、鼓舞人心”。她告诉他们：“我的首要任务之一是让世界知道朝鲜侵犯人权行为，提高人们对逃亡者的关注度并扩大逃亡者的声音。”她指的是朝鲜官方名称“民主人民共和国”的首字母缩写。</p><p>托马斯-格林菲尔德于周日抵达，并于周一会见了韩国总统尹锡悦以及首尔外交部长和国防部长，讨论如何阻止朝鲜的武器计划并在这个与世隔绝的国家促进人权。</p><p>美国大使还将前往日本，预计会见2000年代初被朝鲜绑架的日本公民的家人，并访问1945年遭到美国核弹袭击的长崎，直到周六。</p><p>据路透社说，韩国和日本都是美国的盟友，目前均是安理会成员。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQ0.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E5%25A4%25A7%25E4%25BD%25BF%25E6%258A%25B5%25E8%25AE%25BF%25E9%259F%25A9%25E6%259C%259D%25E8%25BE%25B9%25E5%25A2%2583-%25E6%2595%25A6%25E4%25BF%2583%25E4%25BF%2584%25E4%25B8%25AD%25E4%25B8%258D%25E8%25A6%2581-%25E5%25A5%2596%25E5%258A%25B1-%25E6%259C%259D%25E9%25B2%259C%25E7%259A%2584%25E4%25B8%258D%25E8%2589%25AF%25E8%25A1%258C%25E4%25B8%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA%20-%20https%3A%2F%2Frfi.my%2FAWQ0.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA%20-%20https%3A%2F%2Frfi.my%2FAWQ0.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQ0.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 17:08</div><img src="https://s.rfi.fr/media/display/fc9c5412-e1f6-11ee-92bb-005056a90284/w:1280/p:16x9/AP22238339577090-1.jpg"><p><strong>美国众议院3月中旬通过法案，要求TikTok与中国母公司字节跳动（ByteDance）脱离关系，否则将予以禁用。TikTok执行长周受资（Shou Zi Chew）则不断在各种管道上声称该公司不会把美国用户的资讯交给北京。然而，《财星》（Fortune）杂志采访曾经在该公司任职过的 11 位人士却显示，周受资所说的并非事实。TikTok前员工证实每14天须向北京传送美国用户个资。        </strong></p><div><p>新头壳今天引述《财星》（Fortune）杂志消息，《财星》采访曾于2022 年 4 月至 9 月担任TikTok资深数据师的特纳（Evan Turner）的说法，指出该公司几乎每隔 14 天就会要他将包含数十万美国用户资料的电子表格，透过电子邮件发送给北京的字节跳动。 这些数据包括 TikTok 美国用户的姓名、电子邮件地址、IP 位址以及地理和人口统计资讯。</p><p>特纳说：“我确实参与了一个向中国提供美国数据的项目。”</p><p>他指控说，“他们完全是共犯。 一些在高层管理人员中工作的美国人完全是这件事的同谋。”</p><p>2022 年之前担任TikTok 安全工程首席技术专案经理的莱恩（Patrick Spaulding Ryan）和另一位前TikTok 美国员工则证实，该公司与字节跳动共享Lark软件，由于这个软件是字节跳动负责经营，字节跳动的员工可以看到 TikTok 员工有关美国用户资料等内容的讨论。</p><p>莱恩指出，TikTok 和字节跳动共享的另一项服务是Seal，但“（TikTok 美国） 员工仍然完全不知道”，没有人知道这套软件是如何运作的。</p><p>该报道采访约翰霍普金斯大学资讯安全研究所主任达布拉（Anton Dahbura）认为，这种联系证明“字节跳动并没有致力于在其中国业务和美国业务之间建立真正的防火墙”。 他表示，前员工对 Lark 与中国的联系的指控“并不令人意外”。</p><p>该报道称，TikTok则声称这些已经离职的员工完全是心怀不满、捏造毫无根据的指控。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWR7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258A%2596%25E9%259F%25B3%25E5%25A4%259A%25E4%25BA%25BA%25E6%258F%25AD%25E5%258F%2591%25E6%25AF%258F14%25E5%25A4%25A9%25E5%2590%2591%25E5%258C%2597%25E4%25BA%25AC%25E4%25BC%25A0%25E9%2580%2581%25E7%25BE%258E%25E5%259B%25BD%25E7%2594%25A8%25E6%2588%25B7%25E4%25B8%25AA%25E8%25B5%2584-%25E5%25AE%2598%25E6%2596%25B9%25E7%25A7%25B0%25E5%25B1%259E%25E4%25B8%25AA%25E4%25BA%25BA%25E4%25B8%258D%25E6%25BB%25A1%25E6%2581%25B6%25E6%2584%258F%25E6%25A0%25BD%25E8%25B5%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWR7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
