--- a/articles/rfi/999995.md
+++ b/articles/rfi/999995.md
@@ -1,5 +1,5 @@
-<!--1713278703000-->
-[朔尔兹访问有牛肉成果：中国解禁了](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C-%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86)
+<!--1713284102000-->
+[继非洲毛驴之后，穿山甲又成为中华传统的牺牲品 - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240416-%E7%BB%A7%E9%9D%9E%E6%B4%B2%E6%AF%9B%E9%A9%B4%E4%B9%8B%E5%90%8E%EF%BC%8C%E7%A9%BF%E5%B1%B1%E7%94%B2%E5%8F%88%E6%88%90%E4%B8%BA%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E7%9A%84%E7%89%BA%E7%89%B2%E5%93%81)
 ------
 
-<div>16/04/2024 - 15:40</div><img src="https://s.rfi.fr/media/display/74f0a62c-fbea-11ee-b94f-005056bfb2b6/w:1280/p:16x9/GLQX5FyWAAAdFuC.gif"><p><strong>德国总理朔尔茨在访问北京期间敦促中国同行改善市场准入后，中国海关当局周二表示，中国已解除对部分德国牛肉进口的禁令。        </strong></p><div><p> </p><p>中国今天解除部分德国牛肉进口禁令。中国此前以防止疯牛病的理由对德国牛肉实行进口禁令。</p><p>据路透社今天引述​中国海关总署在微信中表示，这一放宽政策适用于从德国进口的30个月以下小牛的去骨牛肉。</p><p>中国官方说，该变更自4月16日（即公告之日）起生效。</p><p>据朔尔茨周二表示，中国还同意对从德国进口的牛肉和苹果开放边境，并为猪肉进口提供便利。</p><p>朔尔茨是在为期三天的中国之行的最后一天发表上述言论的，期间他会见了中国国家主席习近平，并向中国同行施压，要求提供更好的市场准入，并表示德国不想与中国“脱钩”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWPl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%259C%2594%25E5%25B0%2594%25E5%2585%25B9%25E8%25AE%25BF%25E9%2597%25AE%25E6%259C%2589%25E7%2589%259B%25E8%2582%2589%25E6%2588%2590%25E6%259E%259C-%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A7%25A3%25E7%25A6%2581%25E4%25BA%2586&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWPl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 17:30</div><img src="https://s.rfi.fr/media/display/87b6f128-e5a6-11ec-8321-005056bfb2b6/w:1280/p:16x9/AP19047535489920.jpg"><p><strong>在非洲的毛驴之后，非洲的穿山甲正在成为中国传统营养医学的新的牺牲品。记得今年二月，非洲联盟决定禁止对中国出口毛驴之后，中国有媒体报道说，事实上，中国古代的医学书上明确记载着，阿胶的制作来源是牛皮，而并非是毛驴皮。可惜这么多年来每年因其皮囊而遭到无辜宰杀的数千万头非洲毛驴。                    </strong></p><div><p>同毛驴一样，穿山甲也同样没有任何药用价值，但是，尽管如此，自 2000 年代以来，穿山甲鳞片的使用导致穿山甲贩运的激增，尤其是从非洲被运往中国。在中国，穿山甲的鳞片或血液被用来制作各种药剂，包括一种据说能增强阳刚之气的药剂。而事实上，穿山甲的鳞片同我们人类的指甲一样是由角蛋白制成，它并没有任何特殊的功用。</p><p>而且，为了提高穿山甲的市场价格，人们往往活捉穿山甲，这或许就是新冠疫情初期，穿山甲曾经被认为是病毒从动物传染给人的中间宿主的原因所在。</p><p><strong>非法贩卖非洲穿山甲的路线</strong></p><p>目前世界上已知的穿山甲共有 8 种，其中有 4 种在亚洲，另外4 种在中非。 刚果盆地森林是世界第二大热带森林，由喀麦隆、中非共和国、刚果共和国、刚果民主共和国、加蓬和赤道几内亚六个国家共同拥有，这里是非洲穿山甲的主要栖息地。</p><p>原则上，穿山甲是一种受保护的动物，其贸易自 2017 年起被禁止。然而，非法捕获以及贩卖穿山甲的活动却正在蓬勃发展。据中非地区安全研究所（Institute for Security Studies）中非地区协调员奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）去年发表的一份报告，这种非法贸易带来了数百万美元的收入。倘若不立刻采取措施，穿山甲面临被灭绝的危险。法广法语部记者Amelie Tulet 发自喀麦隆的报道说<strong>：</strong>“这是一个涉及数百万美元的贸易，穿山甲的肉体与鳞片的消费者主要位于亚洲，它们往往在刚果流域的森林中被捕获，由于当捕食者靠近时，穿山甲就会自动卷成团，因此很容易被捕获。之后，村民将其卖给中间商。这些哺乳动物或完整或被宰杀后，经由港口离开非洲大陆，向西途经尼日利亚，向东途经坦桑尼亚和肯尼亚，或乘飞机离开。在喀麦隆，包括《每日新闻》的马蒂亚斯-穆安德-恩加莫在内的几位记者一直在调查这种贩运活动，据他介绍，<em>例如，在机场，一名海关官员告诉我们，贩运者有时会将鳞片碾成粉末，装入牛奶罐中，以便神不知鬼不觉地通过海关 </em>。虽然穿山甲在新冠疫情爆发初期曾经饱受批评，但它在森林生态系统中事实上发挥着重要的调节作用。喀麦隆记者马蒂亚斯-穆恩德-恩加莫介绍说， ‘一只穿山甲每天要消耗大约 20 万只蚂蚁和白蚁，一只穿山甲每年要消耗大约 7000 万只蚂蚁和白蚁。我们可以看到这对刚果盆地森林的影响，对我们种植园的影响则更为重要<em>。 ’</em>到目前为止，刚果流域森林中究竟有多少只穿山甲尚且有待于统计，但是，有一点可以肯定，倘若，不立即采取措施，那么，这种动物将面临被偷猎至灭绝的危险。“</p><p><strong>如何才能有效保护面临灭绝威胁的穿山甲？</strong></p><p>尼日利亚的专家奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）向法广指出，问题在于无论是在非洲当地还是在国际上都缺乏打击这种贩运背后网络的培训和资源，缺乏人力资源，包括护林员，安全执法人员等等，再就是缺乏信息与法规。因为在绝大多数国家，民众并不知道有关保护或禁止穿山甲贸易的法律"。</p><p>确实，要避免穿山甲的物种消失，一方面必须禁止并且切实地阻止非法狩猎，严厉禁止非法贸易。另一方面，还必须从消费者这端着手，因为消费这种受到保护的动物本身也是一种犯法的行为，而且这种消费并没有任何价值。</p><p><a href="http://www.cbcgdf.org/NewsShow/4936/24388.html#:~:text=1.穿山甲的外貌和生活习性&text=它们的四肢粗壮，爪子,和味觉来寻找食物。" target="_blank">中国生物多样性保护与绿色基金会的网站</a>上就明确规定，2020年起，中国将穿山甲由国家二级保护野生动物提升至一级，2020年版的《中国药典》也将穿山甲进行了移除，因为今天大家都明白，野生动物不应该被用来做药材。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
