--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-18 [严歌苓与洛杉矶华人读者举行文化交流：呼吁中国当局尊重创作自由](/articles/voa/1016316.md)
+
+4-18 [王毅将访印柬巴三国 料打经济牌但未必有效](/articles/voa/1016317.md)
+
 4-18 [中国欧盟商会主席警告：欧中贸易摩擦可能演变成全面贸易战](/articles/voa/1016318.md)
 
 4-18 [卡塔尔：加沙停火谈判处于“微妙阶段”](/articles/voa/1016319.md)
@@ -596,8 +600,4 @@
 4-6 [微软：中国利用人工智能在美国挑拨离间](/articles/voa/1016614.md)
 
 4-6 [联合国人权理事会指责以色列对巴勒斯坦人犯下战争罪](/articles/voa/1016615.md)
-
-4-6 [在拜登警告将改变政策后，以色列采取措施以满足美方要求](/articles/voa/1016616.md)
-
-4-6 [欧美决定携手应对中国在传统芯片领域的主导地位](/articles/voa/1016617.md)
 
