--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-18 [内塔尼亚胡：以色列将自己决定如何回应伊朗袭击](/articles/voa/1016313.md)
+
+4-18 [欧洲政治家拥抱TikTok，安全威胁引发各国新的担忧](/articles/voa/1016314.md)
+
+4-18 [美众议院通过禁止中国购买伊朗石油法案，目标针对金融机构](/articles/voa/1016315.md)
+
 4-18 [严歌苓与洛杉矶华人读者举行文化交流：呼吁中国当局尊重创作自由](/articles/voa/1016316.md)
 
 4-18 [王毅将访印柬巴三国 料打经济牌但未必有效](/articles/voa/1016317.md)
@@ -594,10 +600,4 @@
 4-6 [拜登在巴尔的摩巡视被毁大桥，誓言帮助重建](/articles/voa/1016611.md)
 
 4-6 [异议人士获释多年后中国当局仍在迫害其家人](/articles/voa/1016612.md)
-
-4-6 [北京对美财长访华发出积极信号，但不被民族主义网民认可](/articles/voa/1016613.md)
-
-4-6 [微软：中国利用人工智能在美国挑拨离间](/articles/voa/1016614.md)
-
-4-6 [联合国人权理事会指责以色列对巴勒斯坦人犯下战争罪](/articles/voa/1016615.md)
 
