--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-18 [众院议长最终宣布将就援乌和援以法案进行投票](/articles/voa/1016312.md)
+
 4-18 [内塔尼亚胡：以色列将自己决定如何回应伊朗袭击](/articles/voa/1016313.md)
 
 4-18 [欧洲政治家拥抱TikTok，安全威胁引发各国新的担忧](/articles/voa/1016314.md)
@@ -598,6 +600,4 @@
 4-6 [VOA专访缅甸反对派团结政府部长：如何评估中国协助遣返罗兴亚人？](/articles/voa/1016610.md)
 
 4-6 [拜登在巴尔的摩巡视被毁大桥，誓言帮助重建](/articles/voa/1016611.md)
-
-4-6 [异议人士获释多年后中国当局仍在迫害其家人](/articles/voa/1016612.md)
 
