--- a/articles/rfi/999976.md
+++ b/articles/rfi/999976.md
@@ -1,5 +1,5 @@
 <!--1713345302000-->
-[澳大利亚发表首个「国家防卫战略」强调中国威胁 北京反驳](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA-%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5-%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81-%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3)
+[欧盟立法选举在即 谁最不看好欧盟？原来是法国人](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3-%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F-%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA)
 ------
 
-<div>17/04/2024 - 10:27</div><img src="https://s.rfi.fr/media/display/95825426-47e1-11ed-a455-005056a9a7b9/w:1280/p:16x9/drapeau%20Australie.jpg"><p><strong>澳大利亚今天发布了该国首个国防战略，该战略重点关注太平洋地区，称以应对中国的“胁迫策略”和日益增长的地区冲突风险。中国对此表达不高兴，称中国不是一个威胁，并说也不威胁任何人。        </strong></p><div><p>澳大利亚今天公布首份「国家防卫战略」（National Defence Strategy），显示面对中国“胁迫手段”和太平洋地区冲突风险日增，澳大利亚将进一步聚焦在亚太地区。</p><p>澳大利亚国防部长马勒斯（Richard Marles）透露对区域安全和战争风险的严峻评估，他说，“冷战结束后指引国防规划的乐观假设早已不复存在，” 并警告“中国为实现战略目标而采取了胁迫手段，澳洲不再有10年的冲突战略预警期”。</p><p>马勒斯表示，往后不会将重点放在一支几乎能在世界各地执行各式任务的平衡部队，而是聚焦于保护澳大利亚在亚太地区的利益。</p><p>马勒斯说“我们是海上贸易岛国”，还说“澳大利亚必须能够防止敌人扼杀贸易或阻止进入重要航道，”“入侵澳大利亚的情况无论如何都不太可能发生，正是因为对手毋须踏上澳大利亚国土就可对澳大利亚造成很多的损害”。</p><p>该战略核心是发展一支匿踪核动力潜舰舰队、将关键导弹能力提高两倍，并发展一支大型水面作战舰队。马勒斯说：“拥有我国史上最有能力的海军将是我方投射能力和拒止战略的核心。”</p><p>马勒斯还说，澳大利亚必须能够防止敌人封锁重要航道。</p><p>据法新社今天报道称，中国官方对澳大利亚的国家防卫战略针对中国胁迫威胁，并将中国描述为重要威胁表达不满。中国说，中国不是威胁，也不会威胁任何国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWY4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A%25E5%258F%2591%25E8%25A1%25A8%25E9%25A6%2596%25E4%25B8%25AA-%25E5%259B%25BD%25E5%25AE%25B6%25E9%2598%25B2%25E5%258D%25AB%25E6%2588%2598%25E7%2595%25A5-%25E5%25BC%25BA%25E8%25B0%2583%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A8%2581%25E8%2583%2581-%25E5%258C%2597%25E4%25BA%25AC%25E5%258F%258D%25E9%25A9%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWY4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 10:45</div><img src="https://s.rfi.fr/media/display/c36512ec-bf69-11ee-8e73-005056a90284/w:1280/p:16x9/2024-01-08T190336Z_1637134550_RC2E2Z9ZWOZ4_RTRMADP_3_EUROPE-INVESTMENT-ACTIVISTS.JPG"><p><strong>欧洲联盟舆情民调今天公布的欧洲晴雨表调查显示，距离欧洲选举还有不到两个月的时间，法国人对欧盟表现出明显的悲观态度，而欧洲选举只引起法国少数人有兴趣。        </strong></p><div><p>据法新社今天报道说，在欧盟其他 26 个国家中，大多数受访者表示对欧盟的未来持乐观态度，其中丹麦、爱尔兰和立陶宛最为乐观。</p><p>法国是欧盟中仅次于德国的第二人口大国，也是唯一一个乐观主义者占少数（42%）的成员国，被悲观主义者（52%）超过。</p><p>法国近年来的这种趋势似乎有所发展，因为根据 2020 年底的一项调查，52% 的法国人对未来“非常”或“相当”乐观（相比之下，悲观主义者为 44%）。</p><p>在德国，乐观情绪仍然占大多数（60%），但与 2020 年（72%）相比也有所下降。</p><p>然而，欧盟并不是法国忧郁悲观情绪的唯一目标。因为如果 65% 的法国人认为“欧盟的事情正在朝着错误的方向发展”（相比之下，欧洲人的平均比例为 49%），那么更多的法国人 (76%) 认为他们正在朝着错误的方向发展。法国人多认为法国的方向错了。</p><p>法国人对个人生活水平的变化比欧洲平均水平更关心：69% 的人认为个人生活水平在过去五年中有所下降（而欧盟平均水平为 45%）。 53% 的人认为未来五年内还会下降（欧洲水平为 32%）。</p><p>欧盟人对欧盟（尤其是奥地利人和捷克人）抱有负面印象的人数也多于欧洲平均水平，并认为近年来欧盟在世界上的作用已变得“不那么重要”。</p><p>但法国人对欧洲议会的印象最差：如果41%的欧洲人对欧洲议会印象是正面的，那么只有27%的法国人对欧洲议会印象是正面的。 28% 的法国人（18% 的欧洲人）对这一重要的欧盟机构持反对意见。法国人中的大多数（53%）承认他们对欧洲选举不感兴趣，而欧盟平均有 60% 的公民对此感兴趣。</p><p>然而，绝大多数法国人（67%）表示，他们希望通过投票来续约这个总部位于斯特拉斯堡的议会，负责参与欧洲立法的通过。</p><p>关于欧盟及议会选举：只有 8% 的人知道这些选举的确切日期，这些选举是通过一轮直接普选产生的，定于 6 月 9 日在法国举行（在整个欧盟范围内于 6 月 6 日至 9 日之间举行）。 在欧洲，23%的受访者承认不知道投票何时举行，这一比例在法国上升至30%。法新社说，这显示是一个不小的问题。</p><p>当被问及法国的这种不信任时，欧洲议会发言人 Jaume Duch Guillot 强调，这“并不令人意外”。 “这是近年来的一个明显趋势，”他评论道，但不想提供任何解释。</p><p>在法国，一个非常反对欧洲建设的极右的国民联盟（RN，最右边）显然反而会是欧洲选举的赢家，最新民意调查显示，其得票率为 30-32%，远远领先于坚称拥护欧洲建设的总统马克龙的多数党名单（16-18%） ）。</p><p>据该报道，欧洲晴雨表调查是由欧洲议会委托于 2 月 7 日至 3 月 3 日对 27 个欧盟成员国的 26,411 名欧洲公民进行的。</p><p>选举后，欧洲议会总共将有 720 名代表，而目前为 705 名。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25AC%25A7%25E7%259B%259F%25E7%25AB%258B%25E6%25B3%2595%25E9%2580%2589%25E4%25B8%25BE%25E5%259C%25A8%25E5%258D%25B3-%25E8%25B0%2581%25E6%259C%2580%25E4%25B8%258D%25E7%259C%258B%25E5%25A5%25BD%25E6%25AC%25A7%25E7%259B%259F-%25E5%258E%259F%25E6%259D%25A5%25E6%2598%25AF%25E6%25B3%2595%25E5%259B%25BD%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
