--- a/articles/rfi/999999.md
+++ b/articles/rfi/999999.md
@@ -1,5 +1,5 @@
-<!--1713278703000-->
-[朔尔兹访问有牛肉成果：中国解禁了](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C-%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86)
+<!--1713280501000-->
+[美国指控中国补贴芬太尼生产](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7)
 ------
 
-<div>16/04/2024 - 15:40</div><img src="https://s.rfi.fr/media/display/74f0a62c-fbea-11ee-b94f-005056bfb2b6/w:1280/p:16x9/GLQX5FyWAAAdFuC.gif"><p><strong>德国总理朔尔茨在访问北京期间敦促中国同行改善市场准入后，中国海关当局周二表示，中国已解除对部分德国牛肉进口的禁令。        </strong></p><div><p> </p><p>中国今天解除部分德国牛肉进口禁令。中国此前以防止疯牛病的理由对德国牛肉实行进口禁令。</p><p>据路透社今天引述​中国海关总署在微信中表示，这一放宽政策适用于从德国进口的30个月以下小牛的去骨牛肉。</p><p>中国官方说，该变更自4月16日（即公告之日）起生效。</p><p>据朔尔茨周二表示，中国还同意对从德国进口的牛肉和苹果开放边境，并为猪肉进口提供便利。</p><p>朔尔茨是在为期三天的中国之行的最后一天发表上述言论的，期间他会见了中国国家主席习近平，并向中国同行施压，要求提供更好的市场准入，并表示德国不想与中国“脱钩”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWPl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%259C%2594%25E5%25B0%2594%25E5%2585%25B9%25E8%25AE%25BF%25E9%2597%25AE%25E6%259C%2589%25E7%2589%259B%25E8%2582%2589%25E6%2588%2590%25E6%259E%259C-%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A7%25A3%25E7%25A6%2581%25E4%25BA%2586&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWPl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 16:53</div><img src="https://s.rfi.fr/media/display/e78934b4-131f-11ea-886c-005056a99247/w:1280/p:16x9/063_609942630.jpg"><p><strong>周二，一个由美国民选官员组成的委员会指责中国当局间接参与芬太尼的生产，芬太尼是一种强效鸦片制剂，每年导致美国数万人死亡。        </strong></p><div><p>据法新社今天报道称，根据美国众议院民选官员设立的负责中国共产党政策的特别委员会发表的一份报告，中国政府补贴生产芬太尼前体的实验室的活动，芬太尼前体是制造芬太尼所必需的原料。</p><p>该委员会当选成员的一名助理在电话新闻发布会上表示，“这些补贴采取增值税减免的形式。我们观察到，接受补贴的公司销售的药品平均多出十倍。”</p><p>该报告称，大多数涉案公司都是合法注册的，在美国和欧洲拥有众多其他产品的客户。 因此，芬太尼前体的生产和出口不一定是它们的主要活动。</p><p>为了减少中国的芬太尼威胁，该委员会建议设立一个专门机构，具有制裁能力，不仅可以针对这些实验室，还可以针对数字平台以及为它们提供融资的银行，以截断生产芬太尼各个环节的盈利。</p><p>但报告警告，这种方法只有在全球层面加强合作才能取得成果，才能提高有效性。</p><p>芬太尼是一种用于医疗领域的强效合成鸦片制剂，但芬太尼可能被滥用为药物，据美国当局称，芬太尼每年导致美国超过 70,000 人因服药过量死亡，其中主要是 18 至 49 岁的年龄段。 </p><p>美国财政部长耶伦本月早些时候访华期间提出了这个话题，其中包括开始讨论加强反洗钱合作。</p><p>该合作的具体目标是切断毒贩的资金来源，从而减少鸦片制剂流向美国。</p><p>法新社说，如果说迄今为止芬太尼主要来自中国，那么现在市场主要由墨西哥贩毒集团主导。</p><p>中国实验室涉嫌向毒贩（尤其是墨西哥毒贩）提供用于制造芬太尼的物质。</p><p>美国指责中国在打击这些芬太尼成分的非法生产和出口方面做得不够。消息称，中国对国内芬太尼威胁称零容忍，但是对出口芬太尼管制相对宽松。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E6%258C%2587%25E6%258E%25A7%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A1%25A5%25E8%25B4%25B4%25E8%258A%25AC%25E5%25A4%25AA%25E5%25B0%25BC%25E7%2594%259F%25E4%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWQw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWQw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
