--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-18 [奇途无障碍｜轮椅出行遇到石墩子，该如何维权？](/articles/cdt/341562.md)
+
 4-17 [老爸讲科学｜20年了，那些起诉同仁堂的肾衰竭患者，后来怎么样了？](/articles/cdt/341626.md)
 
 4-17 [凤羽财经｜重庆燃气利润暴增8倍，重庆人不干了……](/articles/cdt/341630.md)
@@ -598,6 +600,4 @@
 3-14 [我遭遇了性别歧视｜一个新闻菜鸟和“新黄色新闻”的同床异梦](/articles/cdt/342662.md)
 
 3-14 [每日一语 2024.3.14](/articles/cdt/342664.md)
-
-3-14 [【404文库】城市的地得｜央视记者被阻挠：一个新阶段](/articles/cdt/342666.md)
 
