--- a/articles/rfi/999980.md
+++ b/articles/rfi/999980.md
@@ -1,5 +1,5 @@
-<!--1713318302000-->
-[巴黎奥运将进入百日倒计时](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6)
+<!--1713356104000-->
+[中国田协出面说要调查半程马拉松作弊指控案](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88)
 ------
 
-<div>16/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/7a533db2-fc32-11ee-9fbf-005056a97e36/w:1280/p:16x9/6db39559f747e0f1053aa6446f413ae46fbba34b-1.png"><p><strong></strong></p><div><p>为了满足大众的需求，这些门票中有一半的价格将低于 100 欧元，只有 5% 的门票价格超过 400 欧元。</p><p>16日，法国游泳奥运冠军劳瑞·马努多(Laure Manoudu)成为奥运圣火传递第二位火炬手。根据日程安排，奥运火炬将在希腊境内进行为期9天的传递，于4月26日离开希腊前往法国。4月26日下午17:30在泛雅典体育场，与巴黎奥组委代表团完成交接仪式。</p><p>交接结束后，圣火将在雅典的法国大使馆过夜，第二天登上三桅船“贝伦”号前往法国马赛，并于当地时间5月8日开始在法国展开为期68天的传递活动。最终将于当地时间7月26日，在巴黎点燃万众瞩目的主火炬，宣告第33届夏季奥运会正式开幕。</p><p>巴黎奥运会将于7月26日开幕。4月17日，法国巴黎将迎来夏季奥运会开幕倒计时100天。</p><p>法国总统马克龙15日在接受法国媒体采访时谈到了即将于7月26日在塞纳河上举行的巴黎奥运会开幕式，他表示如果安全风险过高，可能会放弃在塞纳河上举办。</p><p>马克龙表示，“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUI.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25B0%2586%25E8%25BF%259B%25E5%2585%25A5%25E7%2599%25BE%25E6%2597%25A5%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUI.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 11:21</div><img src="https://s.rfi.fr/media/display/8014ac0e-dc57-11ee-b9f1-005056bf30b7/w:1280/p:16x9/AP23200244616280.jpg"><p><strong>刚刚过去的周日北京半程马拉松的视频显示，三名来自非洲国家的选手似乎放慢速度，以便中国选手何杰超过他们并获胜。中国田径协会誓言加强对路跑赛事的调查与监管。        </strong></p><div><p>中国选手何杰报告以 1 小时 03 分 44 秒的成绩获胜，他领先埃塞俄比亚选手德杰内·海鲁·比基拉 (Dejene Hailu Bikila) 和肯尼亚选手罗伯特·凯特 (Robert Keter) 和威利·姆南加特 (Willy Mnangat)，这3个人均获得并列第二名。</p><p>据网上分享的视频显示，三名领先的跑步者向还稍稍落后的何杰挥手，示意终点线。最终四个人一起跑完了整个比赛，总里程刚刚超过 13 英里。</p><p>肯尼亚选手姆南加特告诉英国广播公司，他们三人只是作为起跑者参加比赛，并不计成绩。然而，按照惯例，他们的参赛号码布并没有表明他们是起跑后跑跑而已。</p><p>北京市体育主管部门北京市体育局表示，正在对该事件进行调查，调查结果将在稍后公布。该机构还说，“总体来看，路跑赛事整体运行平稳，但赛事组织管理方面的问题也暴露出来，引起了广泛关注。”</p><p>据路透社说，长跑在中国越来越受欢迎，但比赛却有作弊和组织不善的历史。比如，2018年深圳半程马拉松赛中，有258名参赛者被证实作弊。 2010年，中国山东女子半程马拉松冠军因被发现由他人代跑而被剥夺了冠军头衔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2594%25B0%25E5%258D%258F%25E5%2587%25BA%25E9%259D%25A2%25E8%25AF%25B4%25E8%25A6%2581%25E8%25B0%2583%25E6%259F%25A5%25E5%258D%258A%25E7%25A8%258B%25E9%25A9%25AC%25E6%258B%2589%25E6%259D%25BE%25E4%25BD%259C%25E5%25BC%258A%25E6%258C%2587%25E6%258E%25A7%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
