--- a/articles/rfi/999990.md
+++ b/articles/rfi/999990.md
@@ -1,5 +1,5 @@
-<!--1713300302000-->
-[戴琪：拜登政府正&quot;认真审视&quot;各种贸易防御工具以应对中国经济威胁 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240416-%E6%88%B4%E7%90%AA-%E6%8B%9C%E7%99%BB%E6%94%BF%E5%BA%9C%E6%AD%A3-%E8%AE%A4%E7%9C%9F%E5%AE%A1%E8%A7%86-%E5%90%84%E7%A7%8D%E8%B4%B8%E6%98%93%E9%98%B2%E5%BE%A1%E5%B7%A5%E5%85%B7%E4%BB%A5%E5%BA%94%E5%AF%B9%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E%E5%A8%81%E8%83%81)
+<!--1713316501000-->
+[以色列呼吁对伊朗导弹项目实施新的制裁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81)
 ------
 
-<div>16/04/2024 - 21:08</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪（Katherine Tai）将于周二在国会听证会上作证从而告诉美国国会：拜登政府正在"认真审视"美国的各种贸易防御工具，以应对中国贸易和经济政策所构成的威胁。                    </strong></p><div><p>据路透社4月16日发自华盛顿的消息，戴琪在提前提供的书面证词摘要中指出，中国的政策导致“多个行业出现依赖性和脆弱性，伤害了美国工人和商家，并给我们的供应链制造了真正的风险”。拜登政府为应对中国贸易和经济政策所构成的威胁，正在“认真考虑”美国的各种贸易防御工具，包括重新检讨特朗普时代对中国进口商品课征的关税。</p><p>路透社引述戴琪的话说，“这也是为什么我们正在认真考虑我们现有的工具如何应对这一问题，包括通过对中国相关301条款关税历时四年的检讨。”</p><p>戴琪在书面证词中表示，她正在认真审阅一份由五家美国工会提出的调查申请，该申请要求对中国海上后勤以及造船业中被指控的不公平行为、政策和作法进行新的301条款调查。</p><p>戴琪在证词摘要中还表示，“我们与中华人民共和国的经济关系是复杂的。正如总统所说，我们希望与中国竞争而不是冲突。” 拜登政府在供应链方面工作的主要目的，就是要减少对中国的依赖，让供应来源多元化，以避免像新冠疫情末期出现的瓶颈。</p><p>一周前，美国财政部长耶伦在访华期间已向中国领导人发出警告：由于中国对电动车、太阳能板和其他清洁能源物资的过分投资导致的产能过剩，形成了一波不可接受的出口浪潮的威胁，伤害了美国及其他地方的制造商。</p><p>耶伦周二也将在美国财政部与中国官员就“平衡成长”展开新的对话。路透社引述中国贸易专家的话说，耶伦对北京有关产能过剩的警告可能只是第一步，后续可能会启动新一轮“301条款”不公平贸易行为的调查，从而导致对电动车、太阳能板和其他进口产品加征新的关税。</p><p><strong>2024年度《对外贸易壁垒国家贸易评估报告》</strong></p><p>在不久前的3月29日，美国贸易代表戴琪曾发布2024年度《对外贸易壁垒国家贸易评估报告》（National Trade Estimate Report on Foreign Trade Barriers），其中特别提到了中国在农产品、非市场政策和做法以及助长政府侵犯权利的数据政策方面的壁垒。该报告自1985年以来每年发布一次，全面审查美国商品和服务出口、对外直接投资以及电子商务在主要出口市场面临的重大外国壁垒。</p><p>本年度的报告指出，在农产品方面，中华人民共和国在一系列农产品和食品上存在不透明且繁琐的设施注册要求，作为受高致病性禽流感影响的地区之一，其家禽产品贸易没有遵守基于科学和风险的标准和承诺。</p><p>报告还表示，中国国家主导的非市场经济和贸易方式继续影响着中国奉行的产业政策，并为中国企业提供不公平的竞争优势。这包括大规模的财政支持、监管和其他优惠以及旨在使外国竞争对手处于不利地位的正式和非正式政策和做法。美国贸易代表办公室指出，这种行为严重扭曲和扰乱市场，导致严重且持续的产能过剩，钢铁、铝和太阳能等行业当前的情况就证明了这一点。</p><p>报告还列出了中华人民共和国和俄罗斯等一系列国家存在的有问题的数据政策。报告说，数据政策被利用来推进国家的侵入行为，例如，这些政府可以利用数据本地化政策来监视其人民、干涉劳工权利以及以其他方式损害公民和政治自由。在某些情况下，这些数据政策也缺乏明确性并存在合规问题。</p><p><strong>拉美去年从中国进口钢材年增44% 达创纪录的1000万吨</strong></p><p>此外，最新公布的拉丁美洲钢铁协会（Latin American Steel Association）数据显示：去年拉美地区国家从中国进口的钢材达到创纪录的1000万吨，年增44%。20年前，这个数字只有8.5万吨。</p><p>在拉丁美洲，约有140万人从事钢铁业，但他们的生计日益受到威胁，因为中国钢铁的价格比本土生产的价格低了40%。拉丁美洲钢铁协会主管瓦格纳（Alejandro Wagner）告诉法新社：中国在拉丁美洲的影响力太大了。没有人反对国家之间的贸易，但必须是公平贸易。</p><p>随着廉价的中国钢铁涌入拉丁美洲，威胁到与该行业相关的数以十万计就业机会，拉美金属工人呼吁提高进口关税，比如智利和巴西等国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 01:17</div><img src="https://s.rfi.fr/media/display/acf0f842-fadc-11ee-bb8f-005056bf30b7/w:1280/p:16x9/AP24105783712299.jpg"><p><strong>在伊朗对以色列进行空袭之后，以色列4月16日呼吁对伊朗实施新的制裁。以色列外长 卡茨（Israel Katz）在社交媒体上表示，他已经联系了30多个国家，推动对伊朗导弹项目进行制裁，并宣布伊朗革命卫队为恐怖组织。        </strong></p><div><p>尽管世界各国领导人恳求缓解紧张局势，但以色列似乎决心采取军事报复措施。</p><p>以色列军方官员星期一说，德黑兰必须要为周六发射大约350枚导弹和无人机的空袭付出代价，其中许多是从伊朗本土发射的。</p><p>以色列武装部队参谋长哈勒维（Herzi Halevi）中将说，伊朗的空袭“将得到回应”。</p><p>以色列军方领导人没有细谈将做出什么回应，尽管以色列国防军发言人哈加里（Daniel Hagari）海军少将说，回应将在“我们选择的时刻”做出。</p><p>以色列发出这些强硬的言辞正值以色列最坚定的支持者美国也敦促以色列展示克制之际。华盛顿说，伊朗的导弹和无人机空袭 没有造成多少损害，这本身就是一个巨大的胜利。</p><p>美国是已经将伊朗革命卫队定为恐怖组织的几个国家之一。随着联合国制裁的到期，美国自从去年10月起已经对伊朗弹道导弹项目实施了几轮制裁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWV7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2591%25BC%25E5%2590%2581%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%25AF%25BC%25E5%25BC%25B9%25E9%25A1%25B9%25E7%259B%25AE%25E5%25AE%259E%25E6%2596%25BD%25E6%2596%25B0%25E7%259A%2584%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWV7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
