--- a/articles/rfi/999995.md
+++ b/articles/rfi/999995.md
@@ -1,5 +1,5 @@
-<!--1713284102000-->
-[抖音多人揭发每14天向北京传送美国用户个资 官方称属个人不满恶意栽赃](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84-%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83)
+<!--1713303902000-->
+[“我们的海洋”大会开幕      希腊推出两个新海洋公园](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B-%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95-%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD)
 ------
 
-<div>16/04/2024 - 17:08</div><img src="https://s.rfi.fr/media/display/fc9c5412-e1f6-11ee-92bb-005056a90284/w:1280/p:16x9/AP22238339577090-1.jpg"><p><strong>美国众议院3月中旬通过法案，要求TikTok与中国母公司字节跳动（ByteDance）脱离关系，否则将予以禁用。TikTok执行长周受资（Shou Zi Chew）则不断在各种管道上声称该公司不会把美国用户的资讯交给北京。然而，《财星》（Fortune）杂志采访曾经在该公司任职过的 11 位人士却显示，周受资所说的并非事实。TikTok前员工证实每14天须向北京传送美国用户个资。        </strong></p><div><p>新头壳今天引述《财星》（Fortune）杂志消息，《财星》采访曾于2022 年 4 月至 9 月担任TikTok资深数据师的特纳（Evan Turner）的说法，指出该公司几乎每隔 14 天就会要他将包含数十万美国用户资料的电子表格，透过电子邮件发送给北京的字节跳动。 这些数据包括 TikTok 美国用户的姓名、电子邮件地址、IP 位址以及地理和人口统计资讯。</p><p>特纳说：“我确实参与了一个向中国提供美国数据的项目。”</p><p>他指控说，“他们完全是共犯。 一些在高层管理人员中工作的美国人完全是这件事的同谋。”</p><p>2022 年之前担任TikTok 安全工程首席技术专案经理的莱恩（Patrick Spaulding Ryan）和另一位前TikTok 美国员工则证实，该公司与字节跳动共享Lark软件，由于这个软件是字节跳动负责经营，字节跳动的员工可以看到 TikTok 员工有关美国用户资料等内容的讨论。</p><p>莱恩指出，TikTok 和字节跳动共享的另一项服务是Seal，但“（TikTok 美国） 员工仍然完全不知道”，没有人知道这套软件是如何运作的。</p><p>该报道采访约翰霍普金斯大学资讯安全研究所主任达布拉（Anton Dahbura）认为，这种联系证明“字节跳动并没有致力于在其中国业务和美国业务之间建立真正的防火墙”。 他表示，前员工对 Lark 与中国的联系的指控“并不令人意外”。</p><p>该报道称，TikTok则声称这些已经离职的员工完全是心怀不满、捏造毫无根据的指控。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWR7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258A%2596%25E9%259F%25B3%25E5%25A4%259A%25E4%25BA%25BA%25E6%258F%25AD%25E5%258F%2591%25E6%25AF%258F14%25E5%25A4%25A9%25E5%2590%2591%25E5%258C%2597%25E4%25BA%25AC%25E4%25BC%25A0%25E9%2580%2581%25E7%25BE%258E%25E5%259B%25BD%25E7%2594%25A8%25E6%2588%25B7%25E4%25B8%25AA%25E8%25B5%2584-%25E5%25AE%2598%25E6%2596%25B9%25E7%25A7%25B0%25E5%25B1%259E%25E4%25B8%25AA%25E4%25BA%25BA%25E4%25B8%258D%25E6%25BB%25A1%25E6%2581%25B6%25E6%2584%258F%25E6%25A0%25BD%25E8%25B5%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWR7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:30</div><img src="https://s.rfi.fr/media/display/344e934a-fc30-11ee-8a40-005056bf30b7/w:1280/p:16x9/p2-let281-ocean.png"><p><strong></strong></p><div><p>包括来自约 120 个国家的代表团在内的会议第二天，希腊总理强调，他对“这次会议期间做出的承诺表示欢迎，其中有 400 多项承诺，价值超过 100 亿美元”。</p><p>这些承诺“表明我们有采取行动的政治意愿，只有与政府、企业、民间社会合作”才能“应对这一全球挑战”，“保护我们的海洋”。</p><p>在 2023 年 3 月于巴拿马举行的上一次峰会上，与会者承诺投资 190 亿美元（178 亿欧元），用于可持续捕捞、消除污染、海上安全和保护等项目。欧盟去年宣布将投入8亿多欧元用于海洋相关项目。</p><p>希腊总理表示，“早在我们了解气候变化之前，海洋就已经向我们发出了求救信号”。</p><p>作为今年会议的东道国，希腊决定重点讨论四个主题：沿海地区和岛屿的可持续旅游业、绿色海上运输、减少海洋塑料和微塑料以及地中海的绿色转型。</p><p>作为希腊海洋生物多样性保护结构化战略的一部分，希腊正在实施 21 项预算达 7.8 亿欧元，以用于海洋污染防治工作。</p><p>“我们的海洋”大会是由美国国务卿克里亲自发起召开的。第一、二次大会先后于2014年和2015年在美国华盛顿和智利瓦尔帕莱索召开，国家海洋局均派高级别代表团参会。“我们的海洋”第三次大会于9月15日至16日回师至华盛顿举行。</p><p>来自世界主要海洋和岛屿国家的政府、学界、国际机构和非政府组织共90余个代表团参会，其中有15个沿海国家的外长或海洋、渔业部长及11个国际和地区组织代表就海洋保护区、打击非法捕鱼和全球海洋领导力等议题发言。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E6%2588%2591%25E4%25BB%25AC%25E7%259A%2584%25E6%25B5%25B7%25E6%25B4%258B-%25E5%25A4%25A7%25E4%25BC%259A%25E5%25BC%2580%25E5%25B9%2595-%25E5%25B8%258C%25E8%2585%258A%25E6%258E%25A8%25E5%2587%25BA%25E4%25B8%25A4%25E4%25B8%25AA%25E6%2596%25B0%25E6%25B5%25B7%25E6%25B4%258B%25E5%2585%25AC%25E5%259B%25AD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E2%80%9C%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B%E2%80%9D%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95%20%20%20%20%20%20%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD%20-%20https%3A%2F%2Frfi.my%2FAWU7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E2%80%9C%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B%E2%80%9D%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95%20%20%20%20%20%20%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD%20-%20https%3A%2F%2Frfi.my%2FAWU7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E2%80%9C%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B%E2%80%9D%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95%20%20%20%20%20%20%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
