--- a/articles/rfi/999953.md
+++ b/articles/rfi/999953.md
@@ -1,5 +1,5 @@
-<!--1713374103000-->
-[2024年夏季奥运会倒计时100天，巴黎准备好了吗？](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97)
+<!--1713392101000-->
+[欧盟要求 TikTok 就其向用户付费的奖励服务做出解释](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82-tiktok-%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A)
 ------
 
-<div>17/04/2024 - 12:03</div><img src="https://s.rfi.fr/media/display/602bcf6c-f025-11ee-a26d-005056bfb2b6/w:1280/p:16x9/000_34MX8FC.jpg"><p><strong>距离2024年巴黎夏季奥运会开幕仅剩100天，巴黎、法国本土其他地区和大溪地的奥运场馆正准备迎接7月26日至8月11日之间即将举行的世界上最大的体育赛事 。        </strong></p><div><p>巴黎届时将拥有15个奥运会比赛场馆，并将在其一些最具标志性的古迹及其周边举办32项奥运会比赛项目中的21项。</p><p>巴黎于2017年获得了本届奥运会的主办权，多年来一直在建设场馆，所有工作计划于2024年初完成。这些新场馆包括巴黎附近的水上运动中心，该中心将举办水球和跳水比赛。在水上运动中心附近，平日里举办橄榄球或足球世界杯的法兰西体育场刚刚修建了一条全新的田径跑道。将迎接羽毛球和艺术体操比赛的拉夏贝尔门体育场是小巴黎唯一新建的奥运场馆。通常迎接各类音乐会的德方斯竞技场将在五月份彻底改造，以容纳举办游泳比赛的奥林匹克游泳池。射击运动员将在距离巴黎数小时车程的法国中部小镇沙托鲁射击中心进行比赛。</p><p>7月26日，数千名运动员将在塞纳河上乘船参加奥运开幕式。塞纳河还将在铁人三项和开放水域游泳比赛中接待游泳运动员。这是自100年前，即1924年巴黎举办奥运会以来，塞纳河首次成为被认为安全的游泳比赛场地。</p><p>塞纳河对岸的大皇宫是为1900年世界博览会而建的，经过翻修后，今年可举办击剑和跆拳道比赛。</p><p>沙滩排球比赛将在埃菲尔铁塔脚下的战神广场上举行，运动员们或将在比赛时目睹铁塔上的日落。</p><p>香榭丽舍大街尽头的协和广场将举办小轮车自由式、滑板和霹雳舞赛事。</p><p>荣军院建于1687年，是一所军事医院和退伍军人养老院，内有法国军事历史博物馆和纪念碑，以及拿破仑·波拿巴的墓。本次奥运会期间，观众将可以前往此地观看射箭、自行车和田径比赛。</p><p>距离巴黎不远处，马术比赛将在凡尔赛宫花园举行。凡尔赛宫是国王路易十四的居所，在法国大革命之前，它一直是皇室的中心。</p><p>在巴黎之外，帆船比赛将在马赛的蔚蓝海岸全新航海中心举行。为了向法国的海外领土致敬，冲浪比赛将在法属波利尼西亚大溪地西南海岸的一个村庄蒂胡波奥举行。这是一个拥有原始自然美景的地方，拥有世界上最著名的冲浪胜地。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-2024%25E5%25B9%25B4%25E5%25A4%258F%25E5%25AD%25A3%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6100%25E5%25A4%25A9%25EF%25BC%258C%25E5%25B7%25B4%25E9%25BB%258E%25E5%2587%2586%25E5%25A4%2587%25E5%25A5%25BD%25E4%25BA%2586%25E5%2590%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 18:00</div><img src="https://s.rfi.fr/media/display/db5c5a90-ec41-11ee-aeab-005056bfb2b6/w:1280/p:16x9/gettyimages-1191303754.jpg"><p><strong>本周三（4月17号），欧盟委员会要求社交网络 TikTok （ 海外版抖音） 就其在法国和西班牙推出的奖励观看视频的新服务所带来的成瘾风险做出解释。        </strong></p><div><p>  4 月 11 日，TikTok 宣布在法国和西班牙推出新服务 TikTok Lite。 TikTok Lite 有一项针对 18 岁及以上用户的新功能："奖励计划"，允许用户通过完成 TikTok 上的某些 "任务 "获得积分，如观看视频、点赞、关注创作者、邀请朋友加入 TikTok 等。这些积分可以兑换成奖励，如亚马逊优惠券、贝宝礼品卡或 TikTok 币（可用于给创作者小费）。</p><p>法新社报道， 欧盟行政机构解释说，已要求中国字节跳动集团旗下的 TikTok 提供 "风险评估的细节"，并强调"在欧盟推出新的 TikTok Lite 应用程序之前本应进行风险评估"。</p><p>该委员会说："这涉及到新的“奖励” 程序对保护未成年人和用户心理健康的潜在影响，特别是在可能刺激成瘾行为方面。”</p><p>这项正式请求是在欧洲新数字服务立法（DSA）的背景下提出的，该立法自去年起对包括 TikTok 在内的 22 家主要互联网公司实施了更严格的规定，以保障用户的安全。</p><p>欧盟委员会目前是欧盟的数字监管机构，有权监督和处罚违规者。本周三启动的程序并非首次涉及 TikTok。</p><p>TikTok 必须在 24 小时内提交对新申请的 "风险评估"，并在 4 月 26 日前回答一系列问题。</p><p>周三宣布的信息请求在现阶段并不构成质疑。但这是程序的第一步，一旦证实违反规定，可能会启动正式调查，并最终受到严厉的经济处罚。</p><p> 报道称， 欧盟委员会已于 2024 年 2 月对 TikTok 提起正式诉讼，怀疑其在未成年人保护、广告透明度、研究人员获取数据以及与其应用程序的成瘾性设计和有害内容有关的风险管理等方面违反了《DSA》。委员会目前正在收集更多证据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWf2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25AC%25A7%25E7%259B%259F%25E8%25A6%2581%25E6%25B1%2582-tiktok-%25E5%25B0%25B1%25E5%2585%25B6%25E5%2590%2591%25E7%2594%25A8%25E6%2588%25B7%25E4%25BB%2598%25E8%25B4%25B9%25E7%259A%2584%25E5%25A5%2596%25E5%258A%25B1%25E6%259C%258D%25E5%258A%25A1%25E5%2581%259A%25E5%2587%25BA%25E8%25A7%25A3%25E9%2587%258A&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A%20-%20https%3A%2F%2Frfi.my%2FAWf2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A%20-%20https%3A%2F%2Frfi.my%2FAWf2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWf2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
