--- a/articles/rfi/999955.md
+++ b/articles/rfi/999955.md
@@ -1,5 +1,5 @@
-<!--1713374101000-->
-[中国以规避手法支持莫斯科的武器生产](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7)
+<!--1713390302000-->
+[《法兰克福汇报》：中国是乌克兰战争的赢家之一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5-%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80)
 ------
 
-<div>17/04/2024 - 13:54</div><img src="https://s.rfi.fr/media/display/e88ddb60-9efc-11ec-81cd-005056a97e36/w:1280/p:16x9/000_324M8XM.jpg"><p><strong>尽管美国和英国于12日的周五宣布禁止进口俄罗斯生产的铝、铜和镍，但莫斯科却绕过欧洲的制裁，转向北京寻求对其战斗乌克兰的支持。中国支持莫斯科的武器生产，这是《世界报》经济记者让-米歇尔·贝扎特的报道，他并指出，这证明了中俄两国之间的关系密切。         </strong></p><div><p>欧盟特使大卫·奥沙利文 (David O’Sullivan )是一位极其忙碌的高级公务员。 他担任对俄罗斯实施制裁监督的特使：他受布鲁塞尔控制的爱尔兰白人被指派负责核实中国是否有规避这些对俄罗斯的制裁。 这是中国自 2022 年 2 月针对俄罗斯动武乌克兰的战争开始时第一个一揽子计划生效以来，它一直在这样做，并取得了一些成功。 </p><p style="text-align:left">布鲁塞尔尽管对俄罗斯的石油和煤炭、战略零部件、公司企业、老板和政客实施了制裁，但布鲁塞尔并没有中断与俄罗斯的所有贸易。 </p><p style="text-align:left">几个月来增加了新的制裁。 继1月1日禁止钻石贸易后，3月初，第13个一揽子计划覆盖了200家实体和个人，未影响特定行业。 欧盟对于弗拉基米尔·普京的对手阿列克谢·纳瓦尔尼于 2 月 16 日在北极的一个战俘营中死亡事件一直在抗议中。 X3a </p><p style="text-align:left">但天然气、石油和铀仍然继续在交易，甚至是以间接的方式进行交换。 更不要说某些金属，这对莫斯科来说是一项利润丰厚的营业活动，尽管制裁导致贸易额从 2022 年的 230 亿欧元减少到 2023 年的 140 亿欧元。 </p><p style="text-align:left">铜伪装成废金属 美国和英国于 4 月 12 日星期五宣布禁止进口俄罗斯生产的铝、铜和镍， </p><p style="text-align:left">以及场外衍生品交易的限制。 对他们的业务至关重要，伦敦和芝加哥金属交易所将不再能接受它们。 </p><p style="text-align:left"><strong>欧盟贸易额下降：</strong> </p><p style="text-align:left">英国财政大臣杰里米·亨特保证说：“这将阻止克里姆林宫向其战争机器注入更多资金。” 根据俄罗斯海关数据，制裁正在产生影响：2023年，俄罗斯对欧洲大陆的货物出口下降了68%，全球下降了28%，这证明欧盟与那些拒绝制裁俄罗斯的国家之贸易并没有回偿这一损失。 </p><p style="text-align:left">然而，事实上，每天都会有一些规避这项制裁的办法。在欧盟财政部宣布金属禁运的同时，美国领导人透露，中国通过出售机床、电子元件以及无人机或导弹技术来支持莫斯科的武器生产。 </p><p style="text-align:left">据路透社报道，中俄两国以废金属的形式进行铜贸易。 土耳其、阿拉伯湾和中亚从西方进口的大量商品被再出口到俄罗斯，以支持其对乌克兰战争付出的努力。 欧盟需要十个奥沙利文先生才能监控所有这些暗中交易…… </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BB%25A5%25E8%25A7%2584%25E9%2581%25BF%25E6%2589%258B%25E6%25B3%2595%25E6%2594%25AF%25E6%258C%2581%25E8%258E%25AB%25E6%2596%25AF%25E7%25A7%2591%25E7%259A%2584%25E6%25AD%25A6%25E5%2599%25A8%25E7%2594%259F%25E4%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWbJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWbJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/cdb0f69a-fc7b-11ee-9d62-005056bfb2b6/w:1280/p:16x9/scholz%20china.jpg"><p><strong>德国媒体如何看待朔尔茨总理的访华之行？        </strong></p><div><p>科布伦茨出版的《莱茵报》指出：德国总理的中国之行始终是在保护经济利益和需要在某个问题上采取明确立场之间进行艰难的平衡行为。在经济方面，朔尔茨做出了决定。在这里，他不再寻求平衡，而是跳下了钢丝，站在了商业伙伴一边。</p><p>马格德堡出版的《人民之声报》表示，中国领导人习近平和朔尔茨总理谈了几个小时。其中几乎没有产生任何有形的东西。北京是块光滑的地板。中国人希望为乌克兰的和平而努力，但要按照他们的条件来进行。中国希望深化与德国的经济关系，但要求放弃保护主义。德国方面则要求在华投资时享受与国内企业同等的待遇。曾经有信任的地方现在却充满了怀疑。谁知道共产主义中国明天会不会进攻台湾呢？</p><p>《新奥斯纳布吕克报》写道：龙年，德国感受到中国的热气吹在脖子上。人们不应期待，朔尔茨总理访问中国，然后一切就都会发生变化，甚至会更好。习近平宣布的国家目标最终是中华民族的复兴。不仅个人内部的权利和自由必须服从于此，外交政策关系的设计也必须考虑到这一点。 但如果德国因此而陷入郁闷中，那将是个错误。</p><p>哈勒出版的《中德意志报》表示，在朔尔茨与习近平讨论的所有事情中，必须始终牢记普京最强大的盟友就坐在他的对面。只要侵略乌克兰的战争不伤害中国，但削弱欧洲的安全和经济，习近平就会安然地袖手旁观。无论如何，很难相信拥有14亿公民的核大国会弱到无法影响普京的地步。但以色列和俄罗斯伙伴伊朗之间的中东局势升级、该地区的战火以及两场重大战争对整个国际秩序的破坏则可能对中国构成更大的威胁。</p><p>《法兰克福汇报》分析称：迄今为止，中国可以算得上是乌克兰战争的赢家之一。因此，习近平在德国总理朔尔茨面前主张和平解决，但继续不愿意指出罪恶的根源，更不愿阻止普京，也就不足为奇。看似独立的俄罗斯殖民地“乌克兰”将是一个可能令中国满意的“和平解决方案”。由于俄罗斯事实上已发展成为中国的原材料殖民地，这最终意味着其势力范围的扩大。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%2585%25B0%25E5%2585%258B%25E7%25A6%258F%25E6%25B1%2587%25E6%258A%25A5-%25E4%25B8%25AD%25E5%259B%25BD%25E6%2598%25AF%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%2588%2598%25E4%25BA%2589%25E7%259A%2584%25E8%25B5%25A2%25E5%25AE%25B6%25E4%25B9%258B%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
