--- a/articles/rfi/999957.md
+++ b/articles/rfi/999957.md
@@ -1,5 +1,5 @@
-<!--1713366903000-->
-[昂山素季被由监禁转为监视居住](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F)
+<!--1713390302000-->
+[卡梅伦称以色列已决定报复伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97)
 ------
 
-<div>17/04/2024 - 11:36</div><img src="https://s.rfi.fr/media/display/28e80d0a-3049-11ee-a87e-005056a90284/w:1280/p:16x9/AP23213219378174.jpg"><p><strong>缅甸一位消息人士告诉法新社，被废黜的缅甸反对派领导人昂山素季已被执政军政府从监狱转为软禁。 一位不愿透露姓名的缅甸军方消息人士称，缅甸前总统温敏也从这项措施中受益。        </strong></p><div><p>缅甸的昂山素季被从牢房转移至软禁。缅甸军政府发言人佐敏敦称，该国气温热浪促使当局采取措施保护脆弱的被拘留者。 佐敏吞告诉法新社：“不仅昂山素季和温敏，一些老年囚犯也因酷热而得到了必要的护理。”</p><p>78 岁的昂山素季 (Aung San Suu Kyi) 是 1991 年诺贝尔奖获得者，因遭指控腐败和违反 Covid-19 限制等一系列刑事定罪，正在服刑 27 年。 自从昂山素季在 2021 年军队政变被推翻下台，并被军方逮捕以来，她基本上一直消失于公众视线中，仅在内比都法庭拍摄的模糊官方媒体照片中露面过一次，据当地媒体报道，她正面临健康问题。</p><p>当地媒体报道称，在长达数月的庭审中，昂山素季出现头晕、呕吐，有时由于牙齿感染而无法进食。</p><p>据本台报道称，昂山素季的儿子金·阿里斯 (Kim Aris) 今年 2 月告诉法新社，昂山素季仍被关押在军事首都内比都的一座监狱内。 肖恩·特内尔（Sean Turnell）去年向法新社描述，这座综合大楼在炎热时期没有空调系统，混凝土墙在季风期间会渗水，他曾在那里被监禁了几个月。 在这个与世隔绝的首都的监禁与昂山素季在前军政府时期被软禁的岁月相比，条件相差很大，而当时昂山素季在长期的被软禁中成为了世界著名的民主领袖。</p><p>不过，目前无法立即确定对昂山素季的决定是暂时的还是代表某种减刑。</p><p>军政府还在周三今天的新闻稿中宣布，在缅甸新年之际特赦了 3,300 名囚犯。 军政府表示，周三宣布的囚犯大赦包括将被驱逐出境的 13 名印度尼西亚人和 15 名斯里兰卡人。 新闻稿指出，除了那些被判犯有谋杀、恐怖主义和贩毒罪的囚犯外，其他囚犯的刑期将减少六分之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZ2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E6%2598%2582%25E5%25B1%25B1%25E7%25B4%25A0%25E5%25AD%25A3%25E8%25A2%25AB%25E7%2594%25B1%25E7%259B%2591%25E7%25A6%2581%25E8%25BD%25AC%25E4%25B8%25BA%25E7%259B%2591%25E8%25A7%2586%25E5%25B1%2585%25E4%25BD%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZ2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/191b3272-fb13-11ee-ba96-005056bfb2b6/w:1280/p:16x9/AP24071526557302.jpg"><p><strong></strong></p><div><p>卡梅伦在访问耶路撒冷之初对记者表示：“很明显，以色列人正在决定采取行动。”“我们希望他们这样做的方式尽可能不让事态升级。”</p><p>他说，此行的主要目的是“让世界的注意力重新回到人质状况上”，并敦促哈马斯同意临时停火协议。“真正需要的是，重新关注哈马斯，重新关注人质，重新关注提供援助，重新关注加沙冲突的暂停。”</p><p>访以结束后，卡梅伦将前往意大利参加七国集团部长级会议，并在会上推动对伊朗实施制裁。同一天，德国外长贝尔伯克（Annalena Baerbock）也到访了以色列。</p><p>以色列总理办公室发表声明，指内塔尼亚胡感谢两国为挫败伊朗袭击提供前所未有的支持，但表明在遭受伊朗袭击后，以色列有权自身作出决定，采取必要措施保卫自己。</p><p>贝尔伯克说，已经向内塔尼亚胡表明，绝不能让中东陷入完全不可预测的局面，所有人都必须谨慎和负责任行事。</p><p>卡梅伦较早时就向传媒表示，以色列显然已经决定对伊朗早前发起的无人机和导弹袭击作出回应，他希望以色列尽量避免局势升级。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E5%258D%25A1%25E6%25A2%2585%25E4%25BC%25A6%25E7%25A7%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%25B7%25B2%25E5%2586%25B3%25E5%25AE%259A%25E6%258A%25A5%25E5%25A4%258D%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
