--- a/articles/rfi/999959.md
+++ b/articles/rfi/999959.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[岸田文雄与尹锡悦通话介绍访美成果：继续深化日韩、日美韩合作](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C-%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9-%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C)
+<!--1713386701000-->
+[戴琦在美国参议院听证会谈中美间不公平竞争](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89)
 ------
 
-<div>17/04/2024 - 15:25</div><img src="https://s.rfi.fr/media/display/597e26d0-e67e-11ed-86bc-005056a90284/w:1280/p:16x9/AP23114100492149.jpg"><p><strong>据韩国总统办公室介绍，韩国总统尹锡悦周三应约同日本首相岸田文雄通电话。根据岸田首相的建议，通话于当晚7点开始，持续了15分钟。        </strong></p><div><p>尹锡悦表示，在当前韩半岛、印太地区等国际局势不稳定性上升的背景下，韩日两国应保持紧密合作，并加强韩美日三边合作，为地区和平与共同繁荣作出积极贡献。</p><p>岸田文雄介绍了此次访美成果和日美关系取得的进展，称日方将基于坚实的韩美日合作基础应对国际热点问题，并同韩方伙伴继续深化双边合作。韩国总统室称，两国领导人还就对朝政策交换意见，并同意在相关问题上建设更加紧密的韩日、韩美日合作伙伴关系。</p><p>此外，双方一致同意今年继续加强领导人和外交部门之间的交流沟通，延续两国去年通过7次首脑会谈构建的信赖关系和上升势头。通话结束后，岸田在东京对记者说：“我们同意继续深化日本和韩国之间以及日本、韩国和美国之间的关系”。他介绍说：“我还向尹总统转达了日美峰会上就朝鲜局势交换的意见”。</p><p>此次通话是执政党在韩国国会选举中惨败以来，日韩领导人的首次通话。共同社评估称，岸田的意图是明确表示要与尹锡悦保持合作关系。此次通话也正值韩美日三方对平壤可能再次发射间谍卫星提高警惕之际，据美国智库估计，平壤最迟可能在4月底发射间谍卫星。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcr.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584%25E4%25B8%258E%25E5%25B0%25B9%25E9%2594%25A1%25E6%2582%25A6%25E9%2580%259A%25E8%25AF%259D%25E4%25BB%258B%25E7%25BB%258D%25E8%25AE%25BF%25E7%25BE%258E%25E6%2588%2590%25E6%259E%259C-%25E7%25BB%25A7%25E7%25BB%25AD%25E6%25B7%25B1%25E5%258C%2596%25E6%2597%25A5%25E9%259F%25A9-%25E6%2597%25A5%25E7%25BE%258E%25E9%259F%25A9%25E5%2590%2588%25E4%25BD%259C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcr.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 21:31</div><img src="https://s.rfi.fr/media/display/423cf520-cd54-11ed-9ce3-005056a90284/w:1280/p:16x9/AP23006715775170.jpg"><p><strong>在美国参议院财政委员会关于总统 2024 年贸易政策议程的听证会上，美国贸易代表戴琦发表长篇讲话，涉及众多议题，包括：如何通过贸易赋予工人权力？如何执行贸易协定以创造公平竞争环境等问题。就美国与中国的经贸关系，戴琦认为：公平经济行为的核心是为每个人提供公平的机会。        </strong></p><div><p>戴琦指出<strong>：</strong>当像中国这样的国家继续利用非市场政策和做法来主导行业时，公平竞争是不可能的。这种主导地位使中国能够胁迫其他经济体。</p><p> </p><p>中国的不公平政策和做法摧毁了我国许多工作社区和行业，包括你们各州的许多工作社区和行业。钢铁、铝、太阳能电池板、电池、电动汽车和关键矿物——仅举几例。</p><p> </p><p>中国还利用不公平的政策和做法将某些商品的生产集中在中国，这损害了供应链的弹性，并损害了消费者的利益，从长远来看，消费者被剥夺了公平竞争带来的创新和选择。</p><p> </p><p>正如总统在国情咨文中所说，本届政府将继续抵制中国不公平、非市场的政策和做法。我们正在与志同道合的伙伴和盟友一起这样做，正如你在去年六月我们与澳大利亚、加拿大、日本、新西兰和英国发表的联合声明中看到的那样。</p><p> </p><p>我们看到中国在多个领域造成了依赖和脆弱性，损害了美国工人和企业，并给我们的供应链带来了真正的风险。</p><p> </p><p>这就是为什么我们正在认真研究我们现有的工具如何解决这个问题，包括通过我们对中国 301 关税的四年审查。</p><p> </p><p>这也是为什么在仔细审查了我从五个全国性工会收到的301条款请愿书后，我对中华人民共和国长期以来主导海事、物流和造船业的行为发起了全面彻底的调查。工会的请愿书引发了人们对美国工人、造船业和美国恢复力受到损害的严重担忧。</p><p> </p><p>我们与中国的经济关系很复杂，正如总统所说，我们希望与中国竞争，而不是冲突。 </p><p> </p><p>但竞争必须公平，美国贸易代表办公室和拜登-哈里斯政府每天都在努力将工薪家庭放在第一位，重建美国制造业，并加强我们的供应链。</p><p> </p><p>我们正在利用贸易为每个人提供公平的机会。这意味着创造激励措施不仅仅是降低成本；提高劳工和环境标准；并追求韧性。</p><p> </p><p>戴琦披露：美国贸易代表办公室今年将继续致力于开发创新的贸易工具和战略，将贸易和其他经济政策措施联系起来，以推进这些目标。我要感谢在华盛顿特区和世界各地服务的美国贸易代表办公室团队，感谢他们为全美国服务的坚定奉献和决心。</p><p> </p><p>我认为我们都同意我们的经济体系，包括贸易，应该加强中产阶级的力量。我期待着通过与您和您的员工定期通报情况来继续我们的伙伴关系，就像我们过去三年所做的那样。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWga.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E6%2588%25B4%25E7%2590%25A6%25E5%259C%25A8%25E7%25BE%258E%25E5%259B%25BD%25E5%258F%2582%25E8%25AE%25AE%25E9%2599%25A2%25E5%2590%25AC%25E8%25AF%2581%25E4%25BC%259A%25E8%25B0%2588%25E4%25B8%25AD%25E7%25BE%258E%25E9%2597%25B4%25E4%25B8%258D%25E5%2585%25AC%25E5%25B9%25B3%25E7%25AB%259E%25E4%25BA%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWga.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
