--- a/articles/rfi/999962.md
+++ b/articles/rfi/999962.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[英媒调查：俄军已被证实死亡人数突破5万人大关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5-%E4%BF%84%E5%86%9B%E5%B7%B2%E8%AF%81%E5%AE%9E%E4%BC%A4%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3)
+<!--1713374103000-->
+[2024年夏季奥运会倒计时100天，巴黎准备好了吗？](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97)
 ------
 
-<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/80701928-ef48-11ee-83d5-005056a90284/w:1280/p:16x9/2024-03-28T063828Z_239250322_RC2LU6AB5QPA_RTRMADP_3_UKRAINE-CRISIS-PUTIN-F16.JPG"><p><strong>经英国广播公司（BBC）报导证实，俄罗斯军队在乌克兰的死亡人数现已突破5万人大关。在前线的第2个12个月里——莫斯科推行其所谓绞肉机战略：BBC发现俄军死亡人数比开战以来第1年高出近 25%。自2022年2月全面入侵以来，BBC俄语组、俄独立媒体机构Mediazona和志愿者一直在统计俄军的死亡人数。墓地中的新坟墓帮助调查者们找到了许多士兵的名字。BBC的团队还梳理了来自官方报告、报纸和社交媒体的公开信息。        </strong></p><div><p>根据BBC的调查结果显示，在第2年的战斗中，有超过2.73万名俄罗斯士兵丧生，这反映出在取得领土的同时也付出了巨大的人员代价。俄罗斯官方拒绝对此发表评论。</p><p>“绞肉机”一词被用来形容莫斯科派遣俄军士兵一波波无情地向前推进，试图拖垮乌军并将他们的位置暴露在俄军大炮面前的方式。俄军总死亡人数超过5万人，比莫斯科官方唯一公开承认的2022年9月的死亡人数高出8倍。俄罗斯人的实际死亡人数可能要高得多。</p><p>BBC报道的分析不包括俄罗斯占领的乌东顿涅茨克和卢甘斯克民兵的死亡人数。如果加上这些民兵，俄方的死亡人数会更高。与此同时，乌方很少对其战场死亡人数发表评论。今年2月，乌克兰总统泽连斯基（Volodymyr Zelenskyy）称，已有3.1万名乌克兰士兵阵亡，但根据美国情报估计，损失会更大。</p><p>BBC和俄独立媒体机构Mediazona最新公布的死亡士兵名单显示了俄军改变前线战术所付出的惨痛代价。与这两家媒体机构合作的志愿者们一直在清点自战争开始以来，俄罗斯境内70个墓地中的新军人坟墓。</p><p>航拍图片显示，墓地已大幅扩建。例如，位于莫斯科东南部的博戈罗茨科耶（Bogorodskoye）墓地的图片显示，墓地出现了一片全新的区域。实地拍摄的图片和视频显示，这些新坟墓大多属于在乌克兰阵亡的俄军士兵和军官。</p><p>据BBC估计，在俄方阵亡的战士中，至少有五分之二是在入侵前与该国军队毫无关系的人。伦敦智库、英国皇家联合军种国防研究所的副研究员克兰尼-埃文斯（Samuel Cranny-Evans）解释说，在2022年入侵之初，俄罗斯可以利用其专业部队开展复杂的军事行动。</p><p>这位防务分析家说，但现在这些经验丰富的士兵很可能已经死伤殆尽，取而代之的是没有受过什么训练或没有什么军事经验的人——比如志愿者、平民和囚犯。克兰尼-埃文斯指出，这些人做不了职业军人能做的事，“这意味着他们必须做一些战术上简单得多的事情：通常似乎是在炮火支援下对乌克兰阵地进行前沿突击”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E8%258B%25B1%25E5%25AA%2592%25E8%25B0%2583%25E6%259F%25A5-%25E4%25BF%2584%25E5%2586%259B%25E5%25B7%25B2%25E8%25AF%2581%25E5%25AE%259E%25E4%25BC%25A4%25E4%25BA%25A1%25E4%25BA%25BA%25E6%2595%25B0%25E7%25AA%2581%25E7%25A0%25B45%25E4%25B8%2587%25E4%25BA%25BA%25E5%25A4%25A7%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 12:03</div><img src="https://s.rfi.fr/media/display/602bcf6c-f025-11ee-a26d-005056bfb2b6/w:1280/p:16x9/000_34MX8FC.jpg"><p><strong>距离2024年巴黎夏季奥运会开幕仅剩100天，巴黎、法国本土其他地区和大溪地的奥运场馆正准备迎接7月26日至8月11日之间即将举行的世界上最大的体育赛事 。        </strong></p><div><p>巴黎届时将拥有15个奥运会比赛场馆，并将在其一些最具标志性的古迹及其周边举办32项奥运会比赛项目中的21项。</p><p>巴黎于2017年获得了本届奥运会的主办权，多年来一直在建设场馆，所有工作计划于2024年初完成。这些新场馆包括巴黎附近的水上运动中心，该中心将举办水球和跳水比赛。在水上运动中心附近，平日里举办橄榄球或足球世界杯的法兰西体育场刚刚修建了一条全新的田径跑道。将迎接羽毛球和艺术体操比赛的拉夏贝尔门体育场是小巴黎唯一新建的奥运场馆。通常迎接各类音乐会的德方斯竞技场将在五月份彻底改造，以容纳举办游泳比赛的奥林匹克游泳池。射击运动员将在距离巴黎数小时车程的法国中部小镇沙托鲁射击中心进行比赛。</p><p>7月26日，数千名运动员将在塞纳河上乘船参加奥运开幕式。塞纳河还将在铁人三项和开放水域游泳比赛中接待游泳运动员。这是自100年前，即1924年巴黎举办奥运会以来，塞纳河首次成为被认为安全的游泳比赛场地。</p><p>塞纳河对岸的大皇宫是为1900年世界博览会而建的，经过翻修后，今年可举办击剑和跆拳道比赛。</p><p>沙滩排球比赛将在埃菲尔铁塔脚下的战神广场上举行，运动员们或将在比赛时目睹铁塔上的日落。</p><p>香榭丽舍大街尽头的协和广场将举办小轮车自由式、滑板和霹雳舞赛事。</p><p>荣军院建于1687年，是一所军事医院和退伍军人养老院，内有法国军事历史博物馆和纪念碑，以及拿破仑·波拿巴的墓。本次奥运会期间，观众将可以前往此地观看射箭、自行车和田径比赛。</p><p>距离巴黎不远处，马术比赛将在凡尔赛宫花园举行。凡尔赛宫是国王路易十四的居所，在法国大革命之前，它一直是皇室的中心。</p><p>在巴黎之外，帆船比赛将在马赛的蔚蓝海岸全新航海中心举行。为了向法国的海外领土致敬，冲浪比赛将在法属波利尼西亚大溪地西南海岸的一个村庄蒂胡波奥举行。这是一个拥有原始自然美景的地方，拥有世界上最著名的冲浪胜地。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-2024%25E5%25B9%25B4%25E5%25A4%258F%25E5%25AD%25A3%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6100%25E5%25A4%25A9%25EF%25BC%258C%25E5%25B7%25B4%25E9%25BB%258E%25E5%2587%2586%25E5%25A4%2587%25E5%25A5%25BD%25E4%25BA%2586%25E5%2590%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
