--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
-<!--1713363302000-->
-[克宫证实俄罗斯维和人员开始撤出纳卡地区](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA)
+<!--1713374101000-->
+[视频 俄乌战争 俄攻击乌北部城市切尔尼戈夫 已有10人死亡](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E8%A7%86%E9%A2%91-%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89-%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB-%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1)
 ------
 
-<div>17/04/2024 - 15:05</div><img src="https://s.rfi.fr/media/display/e5f37434-fcb8-11ee-937d-005056a90284/w:1280/p:16x9/Capture-2196.JPG"><p><strong>据俄新社周三报导，俄总统新闻秘书佩斯科夫向记者证实，俄罗斯维和部队已开始从纳戈尔诺-卡拉巴赫地区撤出。克里姆林宫发言人说：“是的，确实如此”。前一天，阿塞拜疆媒体刊登了俄罗斯装备车队经过阿塞拜疆邻近卡拉巴赫地区的画面。        </strong></p><div><p>俄新社报导指，根据阿塞拜疆总统、亚美尼亚总理和俄罗斯总统2020年11月10日的三方声明，俄罗斯维和部队驻扎在纳戈尔诺-卡拉巴赫和拉钦走廊沿线。文件称，该维和部队由1960名军事人员组成，配备小型武器、90辆装甲运兵车、380辆汽车和特种装备。该任务将于2025年结束。</p><p>去年9月，阿塞拜疆不顾俄罗斯维和部队的存在，重新夺回了分离的纳戈尔诺-卡拉巴赫地区，此举引发了居住在那里的亚美尼亚族人的大规模外逃。此后，亚美尼亚总理帕希尼扬（Nikol Pashinyan）对该国与俄罗斯的传统联盟关系提出质疑，并开始与西方国家建立更紧密的关系。</p><p>亚美尼亚还要求俄罗斯边防人员从8月1日起离开在该国首都埃里温主要机场的岗位。阿塞拜疆APA通讯社周二晚些时候报导称，俄罗斯维和人员已开始撤离，第一批人员和装备几天前已从阿塞拜疆卡尔巴加尔（Kalbajar）区一座受亚美尼亚人敬仰的修道院中消失。APA通讯社说，阿塞拜疆警察已在该地取代了俄方人员。</p><p>根据莫斯科斡旋达成的协议，俄罗斯维和部队于2020年11月部署到卡拉巴赫，该协议制止了阿塞拜疆部队与亚美尼亚部队之间长达六周的战斗。俄国防部表示，当时部署了近2000名军人、90辆装甲运兵车、380辆汽车和其他装备。该部署使莫斯科在这一具有重要战略意义的南高加索地区获得了重要的立足点。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcU.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E5%2585%258B%25E5%25AE%25AB%25E8%25AF%2581%25E5%25AE%259E%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E7%25BB%25B4%25E5%2592%258C%25E4%25BA%25BA%25E5%2591%2598%25E5%25BC%2580%25E5%25A7%258B%25E6%2592%25A4%25E5%2587%25BA%25E7%25BA%25B3%25E5%258D%25A1%25E5%259C%25B0%25E5%258C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcU.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 15:49</div><img src="https://s.rfi.fr/media/display/37df5d2e-fca2-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-17T092616Z_1357906527_RC2987AJQIZX_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生，并损坏建筑物和市政基础设施，乌克兰总统泽连斯基呼吁西方提供军援，请看France24埃玛纽埃尔-夏泽（Emmanuelle Chaze）报道。        </strong></p><div><p>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生。</p><p>俄罗斯入侵乌克兰的战争持续，乌克兰总统泽连斯基多次发表令人震惊的言论指出，如果没有美国资金支持乌克兰会输掉这场战争。</p><p>目前美国国会仍在阻挠提供6百亿美元对乌克兰的军援。</p><p>乌克兰总统泽连斯基近期刚刚签署了一项有争议的法律，要延长服役时间并加大惩罚逃兵。</p><p>就在这个背景下，乌克兰北部城市切尔尼戈夫镇在本周三上午遭到俄军袭击 。</p><p>France24 驻乌克兰的记者埃玛纽埃尔-夏泽报道，切尔尼戈夫镇 死亡人数很高，目前至少有10人死亡 20多人受伤，死亡人数很可能会上升，急救人员仍在现场。</p><p>切尔尼戈夫镇距离首都基辅大约两三个小时的车程，这里今天至少被三枚俄罗斯导弹击中。</p><p>乌克兰总统泽连斯基在社交网络上说，说如果乌克兰有自卫手段，就是有有效的防空手段那么悲剧就不会发生。</p><p>乌克兰总统指责其盟国缺乏提供军备的决心。</p><p>此前乌克兰外交部长库列巴曾要求盟国提供至少七套爱国防空系统以保护乌克兰最大的城市，如哈尔科夫和敖德萨等 。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BF%2584%25E4%25B9%258C%25E6%2588%2598%25E4%25BA%2589-%25E4%25BF%2584%25E6%2594%25BB%25E5%2587%25BB%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582%25E5%2588%2587%25E5%25B0%2594%25E5%25B0%25BC%25E6%2588%2588%25E5%25A4%25AB-%25E5%25B7%25B2%25E6%259C%258910%25E4%25BA%25BA%25E6%25AD%25BB%25E4%25BA%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
