--- a/articles/rfi/999965.md
+++ b/articles/rfi/999965.md
@@ -1,5 +1,5 @@
-<!--1713363302000-->
-[美国对中国造船业发起301调查 戴琪：保证进行全面彻底调查](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240417-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5-%E6%88%B4%E7%90%AA-%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5)
+<!--1713366904000-->
+[面对中国：为什么岸田在美国会的讲演和九年前安倍在美国会的讲演截然不同 - 东京专栏](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E4%B8%9C%E4%BA%AC%E4%B8%93%E6%A0%8F/20240417-%E9%9D%A2%E5%AF%B9%E4%B8%AD%E5%9B%BD-%E4%B8%BA%E4%BB%80%E4%B9%88%E5%B2%B8%E7%94%B0%E5%9C%A8%E7%BE%8E%E5%9B%BD%E4%BC%9A%E7%9A%84%E8%AE%B2%E6%BC%94%E5%92%8C%E4%B9%9D%E5%B9%B4%E5%89%8D%E5%AE%89%E5%80%8D%E5%9C%A8%E7%BE%8E%E5%9B%BD%E4%BC%9A%E7%9A%84%E8%AE%B2%E6%BC%94%E6%88%AA%E7%84%B6%E4%B8%8D%E5%90%8C)
 ------
 
-<div>17/04/2024 - 14:15</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪4月17日宣布，在对五个全国性工会向美国贸易代表办公室（USTR）提交的请愿书进行审查后，该部门“正在发起对中华人民共和国（PRC）针对海运、物流和造船行业的支配性行为、政策和做法展开调查”。        </strong></p><div><p>戴琪通过美国贸易代表办公室的新闻稿表示：“这些请愿书提出了严重而令人担忧的指控，称中华人民共和国长期以来一直试图主导海运、物流和造船行业，并列举了中华人民共和国为实现这些目标而使用的不公平、非市场政策和做法。这些指控反映了我们在其他行业已经看到的情况，即中华人民共和国利用广泛的非市场政策和做法来破坏公平竞争，并在中国和全球范围内主导市场”。</p><p>戴琪指出，“我保证对这些工会关注的问题进行全面彻底的调查”。3月12日，美国钢铁工人联合会（USW）等五大工会组织提出请愿，正式要求拜登政府对中国在海事、物流和造船业的“不合理和歧视性”做法展开贸易调查。</p><p>据悉，在考虑请愿书并根据301条款委员会的建议后，美国贸易代表办公室已启动调查。美国贸易代表必须寻求与其行为、政策或做法受到调查的外国政府进行磋商。美国贸易代表办公室已要求就调查与中方进行磋商。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240417-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E8%2588%25B9%25E4%25B8%259A%25E5%258F%2591%25E8%25B5%25B7301%25E8%25B0%2583%25E6%259F%25A5-%25E6%2588%25B4%25E7%2590%25AA-%25E4%25BF%259D%25E8%25AF%2581%25E8%25BF%259B%25E8%25A1%258C%25E5%2585%25A8%25E9%259D%25A2%25E5%25BD%25BB%25E5%25BA%2595%25E8%25B0%2583%25E6%259F%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 13:34</div><img src="https://s.rfi.fr/media/display/8131e55c-fbf6-11ee-a644-005056a90284/w:1280/p:16x9/2024-04-10T143514Z_1347866304_RC2Q37ADHC0H_RTRMADP_3_USA-JAPAN.JPG"><p><strong>日本首相岸田文雄于日本时间4月12日凌晨，在美国国会参众两院联席会议上发表了讲演。岸田在讲演中表示：“我们正站在决定人类历史的下一个时代的分水岭上。美国历经几代人建立起来的国际秩序正面临着新的挑战，那是来自拥有根本不同于我们的价值观和原则的主体的挑战。自由和民主主义在全球范围面临着威胁。”他说：“为捍卫基于自由和民主主义的国际秩序，日本将与美国一道担负起重大的责任。”                    </strong></p><div><p>在讲演中，他把“威胁”的主要对手，定位为中国，他的讲演中有一节的标题是“中国挑战国际社会的和平与稳定”。</p><p>他说：“纵观日本周边国家，中国当前的对外态势和军事动向构成了迄今为止最大的战略挑战，不仅对日本的和平与安全，而且对整个国际社会的和平与稳定都构成了巨大的挑战。</p><p>随着来自中国的这种挑战的持续存在，基于法治的自由开放的国际秩序以及维护和平的承诺仍然是决定性的课题。”</p><p>岸田这次在美国国会演说，是继9年以前，当时的日本首相安倍晋三在美国国会讲演以后，又一位日本首相在美国国会发表讲演。</p><p>地时间2015年4月29日，日本首相安倍晋三在美国国会发表讲演，在这次讲演中，安倍虽然提到了日美在南海问题上的共识，即“第一，国家在主张自己的某一立场的时候，要以国际法为准则；第二，不用武力和威吓推行自己的主张；第三，解决纷争，必须采取和平的手段，但是没有提中国的名字，也没有挑战中国的意思。整个讲演全篇提到中国的地方只有一处，就是在“战后日本”一节中，安倍说道：“美国开放自己的市场，在世界经济中追求自由，并在此基础上建立了战后的经济体系，而最早、最大的受惠国就是日本，在随之而来的80年代，韩国、台湾、ASEAN各国乃至中国勃兴，而日本对这些国家进行了无私的资本与技术的援助，支援了他们的成长。”</p><p>时隔9年，日本面对中国，其战略方针已发生了根本的转换，而这种转换的原因，大致有以下几点：</p><p>1、国际形势的变化。俄罗斯侵略乌克兰，使世界正在形成以乌克兰、美国、日本、欧盟等为一方，以俄罗斯、中国和朝鲜等为另一方的的新冷战结构。日本坚定地站在代表自由、民主阵营的乌克兰、美国和欧盟等一边，而最近正在积极参加以美国为首的安全防卫方面的幅射式系统〔Hub and Spok〕，通过日美同盟、日美印澳“四边机制”、澳英美三边安全伙伴关系（AUKUS）和日美韩合作，构成多重的中国包围网，遏制中国的海洋扩张，而安倍在2015年4月在美国进行讲演时，这种遏制中国的幅射式系统还没有形成。</p><p>2、日中关系的变化。2015年，日中间的问题没有现在这样尖锐，也没有这么多问题，习近平前两期在任期间，一直到2019年，日中关系可以说发展得比较好，民主党政权制造的钓鱼岛“国有化”风波在一定的程度上得以缓解，当时的日本首相安倍晋三2014年11月2到北京参加过APEC会议，10日会见习近平，双方在承认日中对悬而未决的钓鱼岛问题存在“不同看法”的同时，达成了“四点协议”，包括通过对话协商避免出现意外情况等，如果不是新冠蔓延，习近平也会在他担任国家主席后作为国宾首次访日。</p><p>3、当时由于历史问题，日美关系一时陷入低谷，在安倍2006年出任首相以前，他出版了自己的著作《走向美丽之国》，公开否定东京审判的结果，认为“美国为了维护自己的利益和联合国的利益，怀着‘日本不能再次挑战以欧美为中心的秩序’的强烈意志，作为一个代表者，完成了（日本）宪法草案的作成。”在慰安妇问题上，他与他的阁僚也有否定“河野谈话”的倾向，致使2007年，美国会众议院表决通过了一项谴责日本在二战期间强征亚洲其他国家妇女充当日军“慰安妇”并要求日本政府正式道歉的议案。在2015年的讲演中，他花费了大量的篇幅从历史问题着手修缮日美关系，没有精力重点批判中国。</p><p>4、安倍与岸田的对华观不同。由于中国在地缘政治学和经济上对日本具有重大意义，安倍在改善日中关系是有自己的哲学的，他在2013年7月7日接受富士电视台采访时对中方对日中首脑会谈“提条件”提出批评，他认为“日中两国关系密不可分，正因为存在问题，两国才更应该进行对话”。他一贯主张“没有前提条件的日中首脑会谈”，他几乎不错过任何能与习近平进行会谈的机会，2013年9月27日，安倍在首相官邸的记者会上，在回答中日间有关钓鱼岛问题时指出：对于我来说，即使有个别的问题，也要回归互相控制在不影响整体关系的“战略的互惠关系”的原点，从而推动日中关系的发展。由此可见，安倍在改善日中关系中主张个别事项的对立不应该影响整体的日中间的互惠关系。</p><p>而岸田文雄在日中关系上，有偏向台湾方面的倾向，在2022年壬寅虎年春节就要到来之际，岸田文雄日本时间2022年1月28日夜，在首相官邸网页发表了面向在日华人、华侨等的春节贺词，向在日华人、华侨和全球华侨华人贺新春拜新年，致以节日的问候，但是这次春节祝词，用简繁体两种文字登出，只字未提日中关系，看不出有向中国发出的信息，显然有涵盖台湾华侨华人等在内的意味。自从2008年时任首相的福田康夫响应由世界十几个国家的华文媒体组成的“海外华文传媒协会”（CIMA）开展的邀请各国首脑向全球华人贺新年、共迎新春的活动，向华人华侨祝贺春节以来，到2022年，共有8位日本首相15次向华侨、华人祝贺春节，前14次几乎都言及日中关系等，明显是面向大陆发出的信息，而这次在首相官邸网页登出的贺词，只字未提日中关系和中国，明显顾及了台湾方面，可见岸田对日中关系并不是十分顾及。</p><p>5、台湾问题那是没有现在这样尖锐。2008年中国国民党籍的马英九就任总统后，两岸恢复官方透过民间管道间接交流。2015年11月7日，两岸领导人在新加坡实现1949年大陆和台湾分治以后，最高领导人的首次会面，这是两岸关系的重大进展，而现在，在民进党长期执政的背景下，两岸关系剑拔弩张，十分紧张，台湾在地理位置上离日本非常近，日本“台湾有事就是日本有事”的意识越来越强烈。</p><p>正是因为如上等因素，使岸田文雄在美国国会的讲演与九年前截然不同。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E4%B8%9C%E4%BA%AC%E7%89%B9%E7%BA%A6%E8%AE%B0%E8%80%85-%E6%A5%9A%E8%89%AF%E4%B8%80/" title="东京特约记者 楚良一">东京特约记者 楚良一</a></div></div></div></div>
