--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713363301000-->
-[日本首度出动两艘“准航舰”远征印太 或向中国秀肌肉](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98-%E5%87%86%E8%88%AA%E8%88%B0-%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA-%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89)
+<!--1713366902000-->
+[警告称：中国和欧盟有全面贸易战危险](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%AD%A6%E5%91%8A%E7%A7%B0-%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9)
 ------
 
-<div>17/04/2024 - 15:51</div><img src="https://s.rfi.fr/media/display/a2524902-132f-11ea-a55b-005056a99247/w:1280/p:16x9/000_hkg10167682_0.jpg"><p><strong>日本海上自卫队17日宣布，出云号（JS Izumo DDH-183）和加贺号（JS Kaga DDH-184）两艘出云级直升机护卫舰将在5月3日启航，率领6艘水面舰艇、2架P-1海上巡逻机和数艘潜舰分4个战斗编队，展开为期7个月的“2024年印太远征”（IPD24），这是日本海自有史以来规模最大的单次远征部署。        </strong></p><div><p>据自由时报引述美国海军研究协会新闻（USNI News）17日消息，IPD24行动旨在实现“自由开放的印太地区”，突显了日本对区域安全的关切，以及与盟友合作的决心。出云级护卫舰的参与彰显了日本在印太地区的存在和影响力，以及其积极参与维护区域安全的承诺。</p><p>这次远征是日本首次同步部署两艘出云级护卫舰，反映日本意图加强在区域内的存在感。其中，加贺号已于3月完成首阶段改装，能够在甲板上起降F-35B战机，这将大幅提升日本的攻击及防御能力，出云号预计稍后进行类似改装。</p><p>远征期间，日本舰队将分赴澳洲、斐济、法属玻里尼西亚、印度、基里巴斯、帕劳、巴布亚新几内亚、菲律宾、马绍尔群岛、密克罗尼西亚、东加、美国和万纳杜等地，参与包括“马拉拉”（Marara ）、“环太平洋”（RIMPAC）、“太平洋之龙”（Pacific Dragon）、“太平洋先锋”（Pacific Vanguard）、“卡卡杜”（ Kakadu）、“太平洋伙伴”（Pacific Partnership）以及“马拉巴尔”（Malabar）等一系列联合演习，目标是增进与区内盟友的联合作战能力。</p><p>该报道称，与此同时，加拿大14日启动代号“地平线行动”（Operation Horizon）的印太任务，派遣护卫舰蒙特娄号 （HMCS Montreal FFH336） 执行为期6个月的任务；美国罗斯福号航空母舰打击群 （Theodore Roosevelt CSG）结束与韩国及日本海卫在东海的联合演习后，又于11日12日周六期间，与日本海自舰艇在东海南部进行双边演习。</p><p>自由时报称，另据德国军方透露，美海军卡尔文森号（USS Carl Vinson CVN-70）航舰打打击群将参加今夏在夏威夷附近举行的“环太平洋”演习，德国也将出动3架战机和1架运输机与之合作，舰载机将演练保护航舰免受敌机威胁，并模拟对敌军雷达阵地实施打击行动。</p><p>消息引述军事专家分析，日本此次大规模远征部署，旨在向国际社会传达维护自由开放航行的决心，并透过与美德等盟友的联合演训，增强共同威慑和因应区域安全威胁的能力，反制中俄在印太地区日益扩张的影响力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E5%25BA%25A6%25E5%2587%25BA%25E5%258A%25A8%25E4%25B8%25A4%25E8%2589%2598-%25E5%2587%2586%25E8%2588%25AA%25E8%2588%25B0-%25E8%25BF%259C%25E5%25BE%2581%25E5%258D%25B0%25E5%25A4%25AA-%25E6%2588%2596%25E5%2590%2591%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2580%25E8%2582%258C%25E8%2582%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:26</div><img src="https://s.rfi.fr/media/display/e74645da-61fb-11ee-b8df-005056bf30b7/w:1280/p:16x9/AP23268223768333.jpg"><p><strong>欧洲商业游说团体负责人周三警告说，随着保护主义浪潮的高涨，中国和欧洲面临“慢动作火车事故”，有可能演变成一场全面的贸易战。而德国总理向北京转达了欧洲的担忧。        </strong></p><div><p>据路透社今天引述欧盟商会主席警告称，中国和欧盟的贸易紧张局势可能引发全面贸易战。</p><p>中国欧盟商会会长延斯·埃斯凯伦德表示，虽然对两方贸易的一些担忧是合理的，但如果欧洲和中国领导人不加强对话，就存在非生产性脱钩的风险。埃斯凯伦德在广州商会华南分会的一次会议上表示：“火车事故尚未发生，但如果我们继续沿着今天的行进方向，我们可以预见，火车事故将会发生。”</p><p>他指出，“我们需要我们的领导人坐下来探讨如何避免这成为一场全面的贸易战。我认为这已经变得有点紧迫了。”</p><p>周二，德国总理朔尔茨结束了对中国为期三天的访问，并与中国国家主席习近平进行了会谈，朔尔茨在会谈中转达了欧洲对北京投资政策的担忧，并推动改善市场准入。</p><p>欧盟已对中国制造商是否在其市场上倾销电动汽车等补贴商品展开了多项调查。</p><p>美国财长耶伦本月早些时候也访问了中国，并于周二表示，中国对清洁能源产品先进制造业的大规模投资导致了不公平的竞争环境。</p><p>埃斯凯伦德表示，最近的高层会见令人鼓舞。</p><p>据路透社说，埃斯凯伦德讲话时，成千上万的外国买家正在一年两次的广交会上寻找中国制造商进行交易，广交会是中国最大的贸易展览会，在珠江河畔举行。</p><p>埃斯凯伦德表示，鉴于中国作为世界领先制造商的地位，不可能想象没有中国的全球供应链。他称，“我们希望看到的一点改变是，人们认识到中国的制造业规模如此之大，制造业的小幅增量增长就可能对全球产生巨大影响。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25AD%25A6%25E5%2591%258A%25E7%25A7%25B0-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2592%258C%25E6%25AC%25A7%25E7%259B%259F%25E6%259C%2589%25E5%2585%25A8%25E9%259D%25A2%25E8%25B4%25B8%25E6%2598%2593%25E6%2588%2598%25E5%258D%25B1%25E9%2599%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
