--- a/articles/rfi/999968.md
+++ b/articles/rfi/999968.md
@@ -1,5 +1,5 @@
-<!--1713363301000-->
-[中美防长难得对话 说了什么](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D-%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88)
+<!--1713366902000-->
+[岸田文雄与尹锡悦通话介绍访美成果：继续深化日韩、日美韩合作](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C-%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9-%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C)
 ------
 
-<div>17/04/2024 - 15:43</div><img src="https://s.rfi.fr/media/display/acc7f874-a745-11ee-a27e-005056a97e36/w:1280/p:16x9/Dong%20Jun.JPG"><p><strong>美国和中国国防部长昨天稍晚实现一年半以来首次通话，这是两个超级大国在紧张对立局势依然严重的情况下仍希望保持对话的新迹象。但同时这次交流正值美国寻求加强与亚太地区其他国家的军事联盟以对抗中国日益增长的影响力之际。        </strong></p><div><p>据法新社今天报道称，华盛顿希望与北京保持开放的沟通渠道，以防止紧张局势升级。五角大楼报告，美国国防部长奥斯汀和中国国防部长董军通过视频会议通话。</p><p>据美国五角大楼发言人帕特·莱德在公告中说：两位官员讨论了美国和中华人民共和国之间的防务关系以及地区和全球安全问题。奥斯汀强调了两国之间继续开放军事通讯线的重要性，他并重申美国将继续在国际法允许的任何地方安全、负责任地飞行、航行和行动。”</p><p>根据中国国防部的一份新闻稿，中国国防部长董军呼吁中美两国之间应加强信任。</p><p>他强调，中美必须以和平为最宝贵、以稳定为最重要。 而军事部门对稳定双边关系发展和防止重大危机至关重要。</p><p>据法新社，董军重申中国对台湾的立场。 中国将台湾视为自己的省份之一，自 1949 年中国内战结束以来，中国尚未成功将台湾与其他领土统一。</p><p>中国官方透露的董军讲话称，“台湾问题事关中国的核心利益，中国的核心利益决不能受到损害。”</p><p>中国国防部长还呼吁美国尊重中国在南海的主权主张。</p><p>法新社称，北京声称对南海的大部分海域，岛屿和礁石拥有主权，而且最近与菲律宾的紧张局势加剧。</p><p>董军强调，“美国必须承认中国的坚定立场”并“采取具体措施维护地区和平”。</p><p>这次交流是在美国、菲律宾和日本领导人在华盛顿举行史无前例的峰会之后不到一周进行的，峰会期间美国菲律宾和日本特别谴责了北京在这一战略海域的“危险和侵略性”行为。</p><p>在明显针对北京的警告中，美国总统拜登承诺在发生被袭击时美国会保卫菲律宾。</p><p>拜登和习近平去年 11 月在加利福尼亚州会晤期间商定的两国军事安全对话最近恢复，并于 4 月初在夏威夷举行了美国和中国军事代表的工作会议。</p><p>但这位五角大楼负责人与中国国防部长的最后一次重要交流可以追溯到 2022 年 11 月，当时他在柬埔寨会见了时任国防部长魏凤和。</p><p>而时任众议院民主党领袖佩洛西 (Nancy Pelosi) 2022 年访问台湾后，北京决定中断与华盛顿的高层军事讨论。</p><p>2023 年初，中国和美国经历了一段高度紧张的时期，这与中国气球飞越美国领土有关。</p><p>尽管局势有所缓和，但无论是技术竞争还是台湾问题，紧张局势仍然很高。</p><p>在美国和中国领导人于11月就恢复军事讨论达成一致之前，美国国防部长曾警告称，如果两国军队之间缺乏沟通，可能会导致擦枪走火事故恶化。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWd8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E9%259A%25BE%25E5%25BE%2597%25E5%25AF%25B9%25E8%25AF%259D-%25E8%25AF%25B4%25E4%25BA%2586%25E4%25BB%2580%25E4%25B9%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWd8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:25</div><img src="https://s.rfi.fr/media/display/597e26d0-e67e-11ed-86bc-005056a90284/w:1280/p:16x9/AP23114100492149.jpg"><p><strong>据韩国总统办公室介绍，韩国总统尹锡悦周三应约同日本首相岸田文雄通电话。根据岸田首相的建议，通话于当晚7点开始，持续了15分钟。        </strong></p><div><p>尹锡悦表示，在当前韩半岛、印太地区等国际局势不稳定性上升的背景下，韩日两国应保持紧密合作，并加强韩美日三边合作，为地区和平与共同繁荣作出积极贡献。</p><p>岸田文雄介绍了此次访美成果和日美关系取得的进展，称日方将基于坚实的韩美日合作基础应对国际热点问题，并同韩方伙伴继续深化双边合作。韩国总统室称，两国领导人还就对朝政策交换意见，并同意在相关问题上建设更加紧密的韩日、韩美日合作伙伴关系。</p><p>此外，双方一致同意今年继续加强领导人和外交部门之间的交流沟通，延续两国去年通过7次首脑会谈构建的信赖关系和上升势头。通话结束后，岸田在东京对记者说：“我们同意继续深化日本和韩国之间以及日本、韩国和美国之间的关系”。他介绍说：“我还向尹总统转达了日美峰会上就朝鲜局势交换的意见”。</p><p>此次通话是执政党在韩国国会选举中惨败以来，日韩领导人的首次通话。共同社评估称，岸田的意图是明确表示要与尹锡悦保持合作关系。此次通话也正值韩美日三方对平壤可能再次发射间谍卫星提高警惕之际，据美国智库估计，平壤最迟可能在4月底发射间谍卫星。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcr.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584%25E4%25B8%258E%25E5%25B0%25B9%25E9%2594%25A1%25E6%2582%25A6%25E9%2580%259A%25E8%25AF%259D%25E4%25BB%258B%25E7%25BB%258D%25E8%25AE%25BF%25E7%25BE%258E%25E6%2588%2590%25E6%259E%259C-%25E7%25BB%25A7%25E7%25BB%25AD%25E6%25B7%25B1%25E5%258C%2596%25E6%2597%25A5%25E9%259F%25A9-%25E6%2597%25A5%25E7%25BE%258E%25E9%259F%25A9%25E5%2590%2588%25E4%25BD%259C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcr.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
