--- a/articles/rfi/999971.md
+++ b/articles/rfi/999971.md
@@ -1,5 +1,5 @@
-<!--1713356104000-->
-[中国田协出面说要调查半程马拉松作弊指控案](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88)
+<!--1713366902000-->
+[英媒调查：俄军已被证实死亡人数突破5万人大关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5-%E4%BF%84%E5%86%9B%E5%B7%B2%E8%AF%81%E5%AE%9E%E4%BC%A4%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3)
 ------
 
-<div>17/04/2024 - 11:21</div><img src="https://s.rfi.fr/media/display/8014ac0e-dc57-11ee-b9f1-005056bf30b7/w:1280/p:16x9/AP23200244616280.jpg"><p><strong>刚刚过去的周日北京半程马拉松的视频显示，三名来自非洲国家的选手似乎放慢速度，以便中国选手何杰超过他们并获胜。中国田径协会誓言加强对路跑赛事的调查与监管。        </strong></p><div><p>中国选手何杰报告以 1 小时 03 分 44 秒的成绩获胜，他领先埃塞俄比亚选手德杰内·海鲁·比基拉 (Dejene Hailu Bikila) 和肯尼亚选手罗伯特·凯特 (Robert Keter) 和威利·姆南加特 (Willy Mnangat)，这3个人均获得并列第二名。</p><p>据网上分享的视频显示，三名领先的跑步者向还稍稍落后的何杰挥手，示意终点线。最终四个人一起跑完了整个比赛，总里程刚刚超过 13 英里。</p><p>肯尼亚选手姆南加特告诉英国广播公司，他们三人只是作为起跑者参加比赛，并不计成绩。然而，按照惯例，他们的参赛号码布并没有表明他们是起跑后跑跑而已。</p><p>北京市体育主管部门北京市体育局表示，正在对该事件进行调查，调查结果将在稍后公布。该机构还说，“总体来看，路跑赛事整体运行平稳，但赛事组织管理方面的问题也暴露出来，引起了广泛关注。”</p><p>据路透社说，长跑在中国越来越受欢迎，但比赛却有作弊和组织不善的历史。比如，2018年深圳半程马拉松赛中，有258名参赛者被证实作弊。 2010年，中国山东女子半程马拉松冠军因被发现由他人代跑而被剥夺了冠军头衔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2594%25B0%25E5%258D%258F%25E5%2587%25BA%25E9%259D%25A2%25E8%25AF%25B4%25E8%25A6%2581%25E8%25B0%2583%25E6%259F%25A5%25E5%258D%258A%25E7%25A8%258B%25E9%25A9%25AC%25E6%258B%2589%25E6%259D%25BE%25E4%25BD%259C%25E5%25BC%258A%25E6%258C%2587%25E6%258E%25A7%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/80701928-ef48-11ee-83d5-005056a90284/w:1280/p:16x9/2024-03-28T063828Z_239250322_RC2LU6AB5QPA_RTRMADP_3_UKRAINE-CRISIS-PUTIN-F16.JPG"><p><strong>经英国广播公司（BBC）报导证实，俄罗斯军队在乌克兰的死亡人数现已突破5万人大关。在前线的第2个12个月里——莫斯科推行其所谓绞肉机战略：BBC发现俄军死亡人数比开战以来第1年高出近 25%。自2022年2月全面入侵以来，BBC俄语组、俄独立媒体机构Mediazona和志愿者一直在统计俄军的死亡人数。墓地中的新坟墓帮助调查者们找到了许多士兵的名字。BBC的团队还梳理了来自官方报告、报纸和社交媒体的公开信息。        </strong></p><div><p>根据BBC的调查结果显示，在第2年的战斗中，有超过2.73万名俄罗斯士兵丧生，这反映出在取得领土的同时也付出了巨大的人员代价。俄罗斯官方拒绝对此发表评论。</p><p>“绞肉机”一词被用来形容莫斯科派遣俄军士兵一波波无情地向前推进，试图拖垮乌军并将他们的位置暴露在俄军大炮面前的方式。俄军总死亡人数超过5万人，比莫斯科官方唯一公开承认的2022年9月的死亡人数高出8倍。俄罗斯人的实际死亡人数可能要高得多。</p><p>BBC报道的分析不包括俄罗斯占领的乌东顿涅茨克和卢甘斯克民兵的死亡人数。如果加上这些民兵，俄方的死亡人数会更高。与此同时，乌方很少对其战场死亡人数发表评论。今年2月，乌克兰总统泽连斯基（Volodymyr Zelenskyy）称，已有3.1万名乌克兰士兵阵亡，但根据美国情报估计，损失会更大。</p><p>BBC和俄独立媒体机构Mediazona最新公布的死亡士兵名单显示了俄军改变前线战术所付出的惨痛代价。与这两家媒体机构合作的志愿者们一直在清点自战争开始以来，俄罗斯境内70个墓地中的新军人坟墓。</p><p>航拍图片显示，墓地已大幅扩建。例如，位于莫斯科东南部的博戈罗茨科耶（Bogorodskoye）墓地的图片显示，墓地出现了一片全新的区域。实地拍摄的图片和视频显示，这些新坟墓大多属于在乌克兰阵亡的俄军士兵和军官。</p><p>据BBC估计，在俄方阵亡的战士中，至少有五分之二是在入侵前与该国军队毫无关系的人。伦敦智库、英国皇家联合军种国防研究所的副研究员克兰尼-埃文斯（Samuel Cranny-Evans）解释说，在2022年入侵之初，俄罗斯可以利用其专业部队开展复杂的军事行动。</p><p>这位防务分析家说，但现在这些经验丰富的士兵很可能已经死伤殆尽，取而代之的是没有受过什么训练或没有什么军事经验的人——比如志愿者、平民和囚犯。克兰尼-埃文斯指出，这些人做不了职业军人能做的事，“这意味着他们必须做一些战术上简单得多的事情：通常似乎是在炮火支援下对乌克兰阵地进行前沿突击”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E8%258B%25B1%25E5%25AA%2592%25E8%25B0%2583%25E6%259F%25A5-%25E4%25BF%2584%25E5%2586%259B%25E5%25B7%25B2%25E8%25AF%2581%25E5%25AE%259E%25E4%25BC%25A4%25E4%25BA%25A1%25E4%25BA%25BA%25E6%2595%25B0%25E7%25AA%2581%25E7%25A0%25B45%25E4%25B8%2587%25E4%25BA%25BA%25E5%25A4%25A7%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
