--- a/articles/rfi/999973.md
+++ b/articles/rfi/999973.md
@@ -1,5 +1,5 @@
-<!--1713356102000-->
-[德国突袭抓人口走私团伙 逮10人 多有中国人涉案](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99-%E9%80%AE10%E4%BA%BA-%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88)
+<!--1713363302000-->
+[以色列罕派议会代表团访问台湾 称台以面临艰困国际处境 国家小却很强](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240417-%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE-%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83-%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA)
 ------
 
-<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/2e3bc838-b6df-11ee-b345-005056a97e36/w:1280/p:16x9/AP24019459879494.jpg"><p><strong>据德国警方今天在一份公告中表示，德国当局今天早些时候对一个国际人口走私团伙进行了大规模突袭。1000多名警察搜查了德国西部和南部的数十所住宅、商店和办公室，逮捕了10名嫌疑人，其中包括两名律师。涉案达数百中国人也遭问讯。        </strong></p><div><p>据美联社今天报道称，德国针对利用签证许可的人口走私团伙今天进行大规模突袭，并称逮捕10人。</p><p>犯罪嫌疑人被指控非法利用德国专门针对技术外国工人的特殊移民规定，为大约 350 名不符合所需标准的中国公民获取居留许可，以换取数十万欧元非法获利。 </p><p>据德国《图片报》报道，移民局的几名员工在该骗局中受到贿赂。</p><p>警方在北莱茵-威斯特法伦州、石勒苏益格-荷尔斯泰因州、黑森州、莱茵兰-普法尔茨州、巴登-符腾堡州、巴伐利亚州、汉堡和柏林进行了突击搜查，扣押了资产并收集了证据。</p><p>德国内政部长南希·费瑟感谢警方和检察官“大规模打击国际有组织移民偷运”。内政部长称，“在打击走私团伙的过程中，我们正是需要这种高水平的有力调查和持续的打击力度，”该部长坚称， “我们将继续采取严厉措施打击有组织的移民偷运。”</p><p>调查重点是北莱茵-威斯特法伦州，10 名嫌疑人目前被拘留在那里。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZX.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E5%25BE%25B7%25E5%259B%25BD%25E7%25AA%2581%25E8%25A2%25AD%25E6%258A%2593%25E4%25BA%25BA%25E5%258F%25A3%25E8%25B5%25B0%25E7%25A7%2581%25E5%259B%25A2%25E4%25BC%2599-%25E9%2580%25AE10%25E4%25BA%25BA-%25E5%25A4%259A%25E6%259C%2589%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25BA%25E6%25B6%2589%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99%20%E9%80%AE10%E4%BA%BA%20%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWZX.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99%20%E9%80%AE10%E4%BA%BA%20%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWZX.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZX.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E7%AA%81%E8%A2%AD%E6%8A%93%E4%BA%BA%E5%8F%A3%E8%B5%B0%E7%A7%81%E5%9B%A2%E4%BC%99%20%E9%80%AE10%E4%BA%BA%20%E5%A4%9A%E6%9C%89%E4%B8%AD%E5%9B%BD%E4%BA%BA%E6%B6%89%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 14:52</div><img src="https://s.rfi.fr/media/display/1a830ca0-ac73-11ee-bb7f-005056bf30b7/w:1280/p:16x9/AP23362427534236.jpg"><p><strong>台湾立法院长韩国瑜今（17）日在立法院接见“以色列国会议员访问团”以色列国会友台小组主席杜伯斯基（Boaz Toporovsky）议员一行。        </strong></p><div><p>据自由时报今天报道称，台湾立法院长韩国瑜今日会见来访的“以色列国会议员访问团”时表示，台湾与以色列互设代表处迄已逾31年，双方互动都是基于宏观的视野，在学术、科技、能源、农业等领域的交流尤为热络，盼在共同努力下，未来双方交流合作更加深化广化，互蒙其利。韩国瑜并说，台以两国同样缺乏天然资源匮乏、仰赖专业人才，且都面临外在强敌的威胁，但共享重视家庭与教育等传统文化及民主、法治等普世价值，是以双方的合作更显得重要。</p><p>“以色列国会友台小组”主席杜伯斯基议员致词时首先感谢台湾对以色列的坚定支持，他提及以色列目前仍处于战争状态，以色列对抗的是恐怖主义，尤其以国在去年10月遭受哈马斯恐怖攻击、今年4月14日遭受伊朗突袭攻击时，台湾都在第一时间发挥道德勇气，表达关切与支持，使该国政府及人民均深刻感受到台以间深厚的友谊。</p><p>杜伯斯基主席续表示，台湾与以色列都是蕞尔小国，同面临着非常艰困的国际处境，然而国家虽小却很强盛，两国除在科技与其他领域发展都很先进外，更有着共享的价值与信念，两国的共同使命是一起深化双边合作交流，为下一代创造更美好的未来。</p><p>以色列毕兹穆思（Boaz Bismuth）议员表示，台以两国是共享普世价值的民主伙伴，他特别感谢台湾政府及立法部门在以色列遭受外来恐怖攻击时，总是于第一时间发布声明表达支持，两国间的真挚友谊令人感动。另他对台湾国会三党不过半的多元政治环境表达崇高的敬意与羡慕，因为以色列国会席次系由13个不同政党组成，期许未来持续深化国会交流及友好情谊。</p><p>据该报道，韩国瑜接着代表立法院对以色列近日再度遭受外来攻击表达慰问，并盼受难者能够安息，伤者能够尽速痊愈，流离失所者能够重建家园，更希望早日恢复和平。韩国瑜另表示，未来以色列若欲透过在台新建犹太教堂来促进双边交流，立法院乐愿提供必要的协助。</p><p>台湾立法院副院长江启臣则表示，近年以色列陆续与韩国、越南等东亚国家签订双边自由贸易协定，以色列在国际社会中也参与了许多重要的功能性组织，盼未来也能支持台湾参与国际社群，并与台湾携手共创更多的发展与繁荣。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcE.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240417-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E7%25BD%2595%25E6%25B4%25BE%25E8%25AE%25AE%25E4%25BC%259A%25E4%25BB%25A3%25E8%25A1%25A8%25E5%259B%25A2%25E8%25AE%25BF%25E9%2597%25AE%25E5%258F%25B0%25E6%25B9%25BE-%25E7%25A7%25B0%25E5%258F%25B0%25E4%25BB%25A5%25E9%259D%25A2%25E4%25B8%25B4%25E8%2589%25B0%25E5%259B%25B0%25E5%259B%25BD%25E9%2599%2585%25E5%25A4%2584%25E5%25A2%2583-%25E5%259B%25BD%25E5%25AE%25B6%25E5%25B0%258F%25E5%258D%25B4%25E5%25BE%2588%25E5%25BC%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAWcE.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAWcE.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcE.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
