--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
 <!--1713363301000-->
-[中美防长难得对话 说了什么](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D-%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88)
+[日本首度出动两艘“准航舰”远征印太 或向中国秀肌肉](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98-%E5%87%86%E8%88%AA%E8%88%B0-%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA-%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89)
 ------
 
-<div>17/04/2024 - 15:43</div><img src="https://s.rfi.fr/media/display/acc7f874-a745-11ee-a27e-005056a97e36/w:1280/p:16x9/Dong%20Jun.JPG"><p><strong>美国和中国国防部长昨天稍晚实现一年半以来首次通话，这是两个超级大国在紧张对立局势依然严重的情况下仍希望保持对话的新迹象。但同时这次交流正值美国寻求加强与亚太地区其他国家的军事联盟以对抗中国日益增长的影响力之际。        </strong></p><div><p>据法新社今天报道称，华盛顿希望与北京保持开放的沟通渠道，以防止紧张局势升级。五角大楼报告，美国国防部长奥斯汀和中国国防部长董军通过视频会议通话。</p><p>据美国五角大楼发言人帕特·莱德在公告中说：两位官员讨论了美国和中华人民共和国之间的防务关系以及地区和全球安全问题。奥斯汀强调了两国之间继续开放军事通讯线的重要性，他并重申美国将继续在国际法允许的任何地方安全、负责任地飞行、航行和行动。”</p><p>根据中国国防部的一份新闻稿，中国国防部长董军呼吁中美两国之间应加强信任。</p><p>他强调，中美必须以和平为最宝贵、以稳定为最重要。 而军事部门对稳定双边关系发展和防止重大危机至关重要。</p><p>据法新社，董军重申中国对台湾的立场。 中国将台湾视为自己的省份之一，自 1949 年中国内战结束以来，中国尚未成功将台湾与其他领土统一。</p><p>中国官方透露的董军讲话称，“台湾问题事关中国的核心利益，中国的核心利益决不能受到损害。”</p><p>中国国防部长还呼吁美国尊重中国在南海的主权主张。</p><p>法新社称，北京声称对南海的大部分海域，岛屿和礁石拥有主权，而且最近与菲律宾的紧张局势加剧。</p><p>董军强调，“美国必须承认中国的坚定立场”并“采取具体措施维护地区和平”。</p><p>这次交流是在美国、菲律宾和日本领导人在华盛顿举行史无前例的峰会之后不到一周进行的，峰会期间美国菲律宾和日本特别谴责了北京在这一战略海域的“危险和侵略性”行为。</p><p>在明显针对北京的警告中，美国总统拜登承诺在发生被袭击时美国会保卫菲律宾。</p><p>拜登和习近平去年 11 月在加利福尼亚州会晤期间商定的两国军事安全对话最近恢复，并于 4 月初在夏威夷举行了美国和中国军事代表的工作会议。</p><p>但这位五角大楼负责人与中国国防部长的最后一次重要交流可以追溯到 2022 年 11 月，当时他在柬埔寨会见了时任国防部长魏凤和。</p><p>而时任众议院民主党领袖佩洛西 (Nancy Pelosi) 2022 年访问台湾后，北京决定中断与华盛顿的高层军事讨论。</p><p>2023 年初，中国和美国经历了一段高度紧张的时期，这与中国气球飞越美国领土有关。</p><p>尽管局势有所缓和，但无论是技术竞争还是台湾问题，紧张局势仍然很高。</p><p>在美国和中国领导人于11月就恢复军事讨论达成一致之前，美国国防部长曾警告称，如果两国军队之间缺乏沟通，可能会导致擦枪走火事故恶化。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWd8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E9%259A%25BE%25E5%25BE%2597%25E5%25AF%25B9%25E8%25AF%259D-%25E8%25AF%25B4%25E4%25BA%2586%25E4%25BB%2580%25E4%25B9%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWd8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:51</div><img src="https://s.rfi.fr/media/display/a2524902-132f-11ea-a55b-005056a99247/w:1280/p:16x9/000_hkg10167682_0.jpg"><p><strong>日本海上自卫队17日宣布，出云号（JS Izumo DDH-183）和加贺号（JS Kaga DDH-184）两艘出云级直升机护卫舰将在5月3日启航，率领6艘水面舰艇、2架P-1海上巡逻机和数艘潜舰分4个战斗编队，展开为期7个月的“2024年印太远征”（IPD24），这是日本海自有史以来规模最大的单次远征部署。        </strong></p><div><p>据自由时报引述美国海军研究协会新闻（USNI News）17日消息，IPD24行动旨在实现“自由开放的印太地区”，突显了日本对区域安全的关切，以及与盟友合作的决心。出云级护卫舰的参与彰显了日本在印太地区的存在和影响力，以及其积极参与维护区域安全的承诺。</p><p>这次远征是日本首次同步部署两艘出云级护卫舰，反映日本意图加强在区域内的存在感。其中，加贺号已于3月完成首阶段改装，能够在甲板上起降F-35B战机，这将大幅提升日本的攻击及防御能力，出云号预计稍后进行类似改装。</p><p>远征期间，日本舰队将分赴澳洲、斐济、法属玻里尼西亚、印度、基里巴斯、帕劳、巴布亚新几内亚、菲律宾、马绍尔群岛、密克罗尼西亚、东加、美国和万纳杜等地，参与包括“马拉拉”（Marara ）、“环太平洋”（RIMPAC）、“太平洋之龙”（Pacific Dragon）、“太平洋先锋”（Pacific Vanguard）、“卡卡杜”（ Kakadu）、“太平洋伙伴”（Pacific Partnership）以及“马拉巴尔”（Malabar）等一系列联合演习，目标是增进与区内盟友的联合作战能力。</p><p>该报道称，与此同时，加拿大14日启动代号“地平线行动”（Operation Horizon）的印太任务，派遣护卫舰蒙特娄号 （HMCS Montreal FFH336） 执行为期6个月的任务；美国罗斯福号航空母舰打击群 （Theodore Roosevelt CSG）结束与韩国及日本海卫在东海的联合演习后，又于11日12日周六期间，与日本海自舰艇在东海南部进行双边演习。</p><p>自由时报称，另据德国军方透露，美海军卡尔文森号（USS Carl Vinson CVN-70）航舰打打击群将参加今夏在夏威夷附近举行的“环太平洋”演习，德国也将出动3架战机和1架运输机与之合作，舰载机将演练保护航舰免受敌机威胁，并模拟对敌军雷达阵地实施打击行动。</p><p>消息引述军事专家分析，日本此次大规模远征部署，旨在向国际社会传达维护自由开放航行的决心，并透过与美德等盟友的联合演训，增强共同威慑和因应区域安全威胁的能力，反制中俄在印太地区日益扩张的影响力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E5%25BA%25A6%25E5%2587%25BA%25E5%258A%25A8%25E4%25B8%25A4%25E8%2589%2598-%25E5%2587%2586%25E8%2588%25AA%25E8%2588%25B0-%25E8%25BF%259C%25E5%25BE%2581%25E5%258D%25B0%25E5%25A4%25AA-%25E6%2588%2596%25E5%2590%2591%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2580%25E8%2582%258C%25E8%2582%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89%20-%20https%3A%2F%2Frfi.my%2FAWdN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E5%BA%A6%E5%87%BA%E5%8A%A8%E4%B8%A4%E8%89%98%E2%80%9C%E5%87%86%E8%88%AA%E8%88%B0%E2%80%9D%E8%BF%9C%E5%BE%81%E5%8D%B0%E5%A4%AA%20%E6%88%96%E5%90%91%E4%B8%AD%E5%9B%BD%E7%A7%80%E8%82%8C%E8%82%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
