--- a/articles/rfi/999987.md
+++ b/articles/rfi/999987.md
@@ -1,5 +1,5 @@
-<!--1713339902000-->
-[导致五死大火揭消防违规情况严重且持续 旧患未除同区老厦再起火警](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD-%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6)
+<!--1713345302000-->
+[澳大利亚发表首个「国家防卫战略」强调中国威胁 北京反驳](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA-%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5-%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81-%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3)
 ------
 
-<div>17/04/2024 - 09:41</div><img src="https://s.rfi.fr/media/display/6339dab8-fc8d-11ee-a56d-005056a97e36/w:1280/p:16x9/hk-202.jpg"><p><strong>香港早前一宗5死逾40人伤的火灾，起火原因可能是烟蒂烧着大厦一楼天井(不同单位围成的露天空间)杂物或电力装置超负荷造成，而起火地点储存大量胶袋及清洁工具则令火势迅速蔓延和浓烟四起，逾半楼层的防烟门亦因失修而未能发挥阻缓作用。事件揭发，消防处发出近30万张消防安全指示中，逾六成未被遵从，当中不少涉及上述火灾大厦所处区域。        </strong></p><div><p>正当特首李家超昨(16日)天声称已要求相关部门加快执法，并会在年内修例，以加强执法及提高罚则之时，同日下午同区内一幢有52年历史的金华大厦发生大火，有一百多名居民需要疏散，期间有冷气机烧至飞堕地下，幸而未造成重大伤亡，但却是区内一星期内第二宗火警。</p><p>与游客区尖沙咀毗连的佐敦区，区内有60年历史的华丰大厦上周叁(10日)发生夺命大火，造成五死逾40人受伤。事后经传媒查问，消防处证实，大厦消防装置的年度检查已过期年半，而当局今年2月9日巡查时，并未发现火警危险。但事实上，消防处曾于2008年向由业主组成以处理大厦管理事宜的业主立桉法团发出消防安全指示，但法团以不同理由推迟限期，结果是至今仍未遵办。</p><p>对于大厦未有按消防处的指示消除安全隐患，居民指大厦内的宾馆霸占业主立桉法团而拒绝进行耗费不低的工程，身兼法团主席的宾馆东主则予以否认，并指之前已维修近叁十道防烟明，至于仍在讨论的工程，则因工程投标商临时以倍数地大幅加价，法团正在处理，未料发生火警。</p><p>另外，消防处回覆传媒时透露，处方及屋宇署一共巡查了全港逾一万幢旧式楼宇，九成半需发出安全指示，合共超过 29万张，截至上月底，有11万张已获遵办或撤销。换言之，有大约62%的个桉仍未处理，当中，以火警所在的「油(麻地)尖(沙咀)旺(角)区」占最多，有1800多幢。</p><p>本台记者曾到尖沙咀区内有不少宾馆和食肆的重庆大厦，发现仍然人流如鰂，但逃生楼梯有摆放杂物丶个别楼层的消防装置被住户衣物遮蔽丶防烟门大开等情况均有出现。</p><p>违反消防安全指示只有罚款，根据《消防安全(建筑物)条例》，如业主或拥有人无合理辩解而没有遵从消防安全指示，一经定罪，可判罚款2.5万港元，每日另处罚款2500元。</p><p>事隔一星期，特首李家超在出席会议前表示，已要求消防处及屋宇署加快执法工作，包括压缩程序等，但由于旧楼数目逾万幢，必须定下执行优次，当局正就此进行审视。</p><p>另外，港府又会修例，以加强执法和增加罚则，同时容许当局介入维修消防设备，事后再追究不同单位的经济和违规责任。他指出，保安局会在今年内向立法会提交消防条例的修订草桉，较原订时间提前两丶叁个月。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWXY.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E5%25AF%25BC%25E8%2587%25B4%25E4%25BA%2594%25E6%25AD%25BB%25E5%25A4%25A7%25E7%2581%25AB%25E6%258F%25AD%25E6%25B6%2588%25E9%2598%25B2%25E8%25BF%259D%25E8%25A7%2584%25E6%2583%2585%25E5%2586%25B5%25E4%25B8%25A5%25E9%2587%258D%25E4%25B8%2594%25E6%258C%2581%25E7%25BB%25AD-%25E6%2597%25A7%25E6%2582%25A3%25E6%259C%25AA%25E9%2599%25A4%25E5%2590%258C%25E5%258C%25BA%25E8%2580%2581%25E5%258E%25A6%25E5%2586%258D%25E8%25B5%25B7%25E7%2581%25AB%25E8%25AD%25A6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD%20%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6%20-%20https%3A%2F%2Frfi.my%2FAWXY.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD%20%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6%20-%20https%3A%2F%2Frfi.my%2FAWXY.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWXY.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD%20%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 10:27</div><img src="https://s.rfi.fr/media/display/95825426-47e1-11ed-a455-005056a9a7b9/w:1280/p:16x9/drapeau%20Australie.jpg"><p><strong>澳大利亚今天发布了该国首个国防战略，该战略重点关注太平洋地区，称以应对中国的“胁迫策略”和日益增长的地区冲突风险。中国对此表达不高兴，称中国不是一个威胁，并说也不威胁任何人。        </strong></p><div><p>澳大利亚今天公布首份「国家防卫战略」（National Defence Strategy），显示面对中国“胁迫手段”和太平洋地区冲突风险日增，澳大利亚将进一步聚焦在亚太地区。</p><p>澳大利亚国防部长马勒斯（Richard Marles）透露对区域安全和战争风险的严峻评估，他说，“冷战结束后指引国防规划的乐观假设早已不复存在，” 并警告“中国为实现战略目标而采取了胁迫手段，澳洲不再有10年的冲突战略预警期”。</p><p>马勒斯表示，往后不会将重点放在一支几乎能在世界各地执行各式任务的平衡部队，而是聚焦于保护澳大利亚在亚太地区的利益。</p><p>马勒斯说“我们是海上贸易岛国”，还说“澳大利亚必须能够防止敌人扼杀贸易或阻止进入重要航道，”“入侵澳大利亚的情况无论如何都不太可能发生，正是因为对手毋须踏上澳大利亚国土就可对澳大利亚造成很多的损害”。</p><p>该战略核心是发展一支匿踪核动力潜舰舰队、将关键导弹能力提高两倍，并发展一支大型水面作战舰队。马勒斯说：“拥有我国史上最有能力的海军将是我方投射能力和拒止战略的核心。”</p><p>马勒斯还说，澳大利亚必须能够防止敌人封锁重要航道。</p><p>据法新社今天报道称，中国官方对澳大利亚的国家防卫战略针对中国胁迫威胁，并将中国描述为重要威胁表达不满。中国说，中国不是威胁，也不会威胁任何国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWY4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A%25E5%258F%2591%25E8%25A1%25A8%25E9%25A6%2596%25E4%25B8%25AA-%25E5%259B%25BD%25E5%25AE%25B6%25E9%2598%25B2%25E5%258D%25AB%25E6%2588%2598%25E7%2595%25A5-%25E5%25BC%25BA%25E8%25B0%2583%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A8%2581%25E8%2583%2581-%25E5%258C%2597%25E4%25BA%25AC%25E5%258F%258D%25E9%25A9%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWY4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
