--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
 <!--1713303902000-->
-[中国奇瑞将签署在巴塞罗那生产协议](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE)
+[耶伦：华盛顿准备加强对伊朗的制裁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E8%80%B6%E4%BC%A6-%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81)
 ------
 
-<div>16/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/d798ca48-fc30-11ee-881c-005056bf30b7/w:1280/p:16x9/Logo-Chery.png"><p><strong></strong></p><div><p>西班牙工业部在一份声明中表示，“两家公司达成了一项“协议”，将在位于巴塞罗那前日产工厂生产汽车”。</p><p>现阶段尚未透露该协议的细节，该协议将于周三在马德里举行的会议上签署，会议期间工业部长乔迪·俄瑞武（Jordi Hereu）和奇瑞代表团将在加泰罗尼亚地区政府成员出席的情况下签署。</p><p>加泰罗尼亚议会议长托伦德(Roger Torrent)高兴地说，“经过几个月的谈判，我们最终实现了前日产工厂的再工业化”，“埃布罗和奇瑞之间达成了生产数千辆汽车的协议”。因此前有消息说，中国奇瑞有意在意大利设分厂。</p><p>至于选址，奇瑞很可能会重启原先日产在巴塞罗那的工厂，恢复当地约1600个工作岗位。该工厂曾因产量减少于2021年停产关闭。</p><p>拥有 3,000 名员工的前日产工厂于 2021 年 12 月关闭。这个庞大工业综合体的一部分被出售给摩托车制造商 Silence 和 EV Motors，但地方当局与 EV Motors 一直在寻找另一家投资者完全重新启动该网站。</p><p>奇瑞是继电动汽车冠军比亚迪之后第二家宣布在欧洲设立工厂的中国制造商，比亚迪于二月份正式在匈牙利建设其第一家欧洲工厂。 后者将在三年内投入运营。</p><p>奇瑞成立于1997年，是一家国有企业。 该品牌声称到 2023 年将售出 188 万辆乘用车，大约 15 年前在中国非常受欢迎，尤其是针对当地市场的省油型城市汽车。</p><p>法新社表示，中国奇瑞做出这样的决定是不容易的。2023年下半年以来，欧美接连宣布对中国电动汽车发起调查措施。当年9月，欧盟宣布对中国电动汽车启动反补贴调查。2024年3月6日，欧盟发布公报称，“已掌握足够证据，表明出口到欧盟的中国电动汽车正在接受补贴”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A5%2587%25E7%2591%259E%25E5%25B0%2586%25E7%25AD%25BE%25E7%25BD%25B2%25E5%259C%25A8%25E5%25B7%25B4%25E5%25A1%259E%25E7%25BD%2597%25E9%2582%25A3%25E7%2594%259F%25E4%25BA%25A7%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:42</div><img src="https://s.rfi.fr/media/display/9fb38c92-fc05-11ee-81f3-005056bf30b7/w:1280/p:16x9/2024-04-03T094420Z_334683959_RC26D0A5LJVP_RTRMADP_3_ZAMBIA-DEBT.JPG"><p><strong></strong></p><div><p>她强调“伊朗的行为威胁到该地区的稳定，并可能产生严重经济后果”。</p><p>根据演讲稿的内容，耶伦会表示，自 2021 年 1 月拜登入主白宫以来，美国财政部已“针对与恐怖主义和伊朗政权资助恐怖主义有关的 500 多名个人和实体”以及该地区与之相关的各种运动。 这是特别针对“伊朗的无人机和导弹计划及其对哈马斯、胡塞武装、真主党和伊拉克民兵的资助”。</p><p>耶伦女士将坚持这样一个事实：对哈马斯实施的制裁绝不能阻止向加沙居民提供援助； 财政部一直在努力“确保制裁不会阻碍重要的援助”。</p><p>“在加沙，超过 200 面临严重的粮食不安全，大多数人已经流离失所。 我们所有参加这些会议的人都有责任尽我们所能来结束这种痛苦。”</p><p>国际货币基金组织和世界银行的春季会议将持续一个星期。今年的会议仍将充满怀旧气氛，因为 2024是 国际货币基金和世界银行成立80周年。</p><p>两个机构诞生于1944年、第二次世界大战尚未结束时举行的布列登森林（Bretton Woods ）会议，当时盟国试图规范第二次世界大战结束后的国际金融秩序。</p><p>当时的金融挑战巨大，亚洲和欧洲的大片地区需要重建。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E8%2580%25B6%25E4%25BC%25A6-%25E5%258D%258E%25E7%259B%259B%25E9%25A1%25BF%25E5%2587%2586%25E5%25A4%2587%25E5%258A%25A0%25E5%25BC%25BA%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%80%B6%E4%BC%A6%EF%BC%9A%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWUD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%80%B6%E4%BC%A6%EF%BC%9A%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWUD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%80%B6%E4%BC%A6%EF%BC%9A%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
