--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-18 [保护工人利益、确保公平竞争：拜登政府宣布针对中国的新贸易措施](/articles/voa/1016308.md)
+
+4-18 [乌克兰官员称切尔尼戈夫遭到致命的俄罗斯导弹袭击](/articles/voa/1016309.md)
+
 4-18 [婆媳关系必须和谐 抖音快手下架多部宣扬 “非主流家庭观”的微短剧](/articles/voa/1016310.md)
 
 4-18 [日本外务省年度报告: 中朝俄造成二战以来最严重威胁](/articles/voa/1016311.md)
@@ -596,8 +600,4 @@
 4-6 [玻利维亚向中国表达对台湾震灾关怀遭台湾谴责](/articles/voa/1016606.md)
 
 4-6 [澳大利亚国会议员代表团将访问台湾，重申对台湾的支持](/articles/voa/1016607.md)
-
-4-6 [拜登将在白宫接待日本和菲律宾领导人并举行三边峰会](/articles/voa/1016608.md)
-
-4-6 [针对AI电脑，美国对华芯片技术管制又升级？中国芯片设备将陷入维修窘境？](/articles/voa/1016609.md)
 
